--- a/10.md
+++ b/10.md
@@ -78,13 +78,15 @@
 
 最后我想给大家讲的是Hammerly做的研究。算了……我还是下次再讲这个研究，因为我今天还有一些重要的事情要讲，所以下节课一开始我就会讲这个研究。这个研究报告很长，但是又很重要，所以下节课我要讲的第一件事就是这个研究。今天下课前我还要讲一些内容，这些内容足以改变我们的人际关系，弄假直到成真。David Myers在这个属于幸福心理学的领域里做了很多相关的研究。他在研究中发现：**很多时候即便我们是假装快乐，假装很有自尊——像William James说的假装高兴——我们的情绪也会因此改变。**问题来了：那我们怎么能全然为人呢？好，首先，总有些时候我们不想弄假直到成真，我们想要哭泣，我们想要难过并表现出来，但是同时我们还得要准时出门，参加派对，即便我们一点也不想出门。这里的区别就在于**积极接受。**我仍然接受我的情绪，接受我的痛苦并感受它，同时选择用最适当的最对自己有益的方式去面对，所以说我能接受被女友抛弃这个现实。我能接受自己感觉糟透了的现实，三天之后，照样出门到Oaks参加派对，疯玩一通。因此，正是因为脸部回馈假说，因为身体回馈假说，因为自我认知理论，行为影响了我的态度。在Oakes狂欢一夜之后，我实际上感觉好多了，也更健康了，好吧健康不一定，但是感觉是好多了。
 
-下面我要播放一段Marva Collins的录像，当中她谈了一些自己的经历。我觉得也许我现在这样是因为我的父母和他们的坚持，我想要和他们一样成功，和我的祖父母一样成功，在以前成功的黑人是很少见的，所以我认为是我父母和祖父母的决心，他们……我们会抬头挺胸。我和比我小14岁的妹妹去教堂的时候，如果我们没有挺胸抬头，我妈妈会说；她会在我上学的时候，我常听见别人对她说“我一眼就能在操场找出你的小孩。”抬起你的头，直着走。如果你仔细观察Marva Collins，你会发现她就是这么走路的，她的姿势就是如此，并因此给她的学生和其他人，也给她自己传递了一种信息。我现在要跳过一些内容，所以大部分行为上的变化都是渐进式的。那什么是突发式变化呢？突发式变化关注的是如何应对，关注的是承担风险。当我们去应对的时候需要做一些不太愿意做的事，换句话说就是**离开舒适区，进入学习区**。
+下面我要播放一段Marva Collins的录像，当中她谈了一些自己的经历。我觉得也许我现在这样是因为我的父母和他们的坚持，我想要和他们一样成功，和我的祖父母一样成功，在以前成功的黑人是很少见的，所以我认为是我父母和祖父母的决心，他们……我们会抬头挺胸。我和比我小14岁的妹妹去教堂的时候，如果我们没有挺胸抬头，我妈妈会说；她会在我上学的时候，我常听见别人对她说“我一眼就能在操场找出你的小孩。”抬起你的头，直着走。如果你仔细观察Marva Collins，你会发现她就是这么走路的，她的姿势就是如此，并因此给她的学生和其他人，也给她自己传递了一种信息。我现在要跳过一些内容，所以大部分行为上的变化都是渐进式的。那什么是突发式变化呢？**突发式变化关注的是如何应对，关注的是承担风险**。当我们去应对的时候需要做一些不太愿意做的事，换句话说就是**离开舒适区，进入学习区**。
 
-现在我要给大家讲两个我自己的故事。这两个故事乍听起来毫不相关，但如果大家听明白了的话，就会发现它们息息相关。第一个故事不轻松；另一个也不轻松。我的第一个人生记忆，大家知道当人们开始记事的时候记得的第一件事就是第一个人生记忆。我的第一个人生记忆是发生在1973年9月，那时我快满三岁了。那天是赎罪日，一年当中最神圣的一天。我记得我当时在家，突然电话响了。我的父母是非常正统的教徒，我从小成长在正统的家庭里。我们的电话在安息日、周六都不会响的，更不要说赎罪日了。但是这天电话响了。我记得他们当时跳了起来，向电话奔去。我爸爸拿起了电话，我当时站在父母中间，我爸爸看着我妈妈小声说着什么，我听不清，但是我看到我妈妈的脸色变了。我从她眼里看到了恐惧。我哭了起来，我爸爸把我抱起来，他对我说：“我要离开几天，不过我会回来的。”现在我知道当时发生了什么事。当时我父母接到我叔叔打来的电话，他当时在军队服役，在情报部门，他说战争爆发了。在以色列一年当中最神圣的一天，年轻人，以色列军队当时都不在边防线上，完全出乎大家的意料，5个阿拉伯国家同时向以色列宣战。我爸爸把我放下来，走进他的房间，一切仍历历在目。我看到他拿出自己的军装，穿好，拿出他的M16自动步枪，背好，穿上鞋，系好鞋带。我妈妈一直在他身边帮他整理，他们交谈当中偶尔会向我微笑一下，但是我感到一种紧张不安。我不明白为什么，然后我们一起下楼走到我爸爸的车旁边。他当时有一辆老式的绿色福特跑天下。他把鞋油拿出来，涂在车前灯上。为什么呢？也是后来我才知道，因为在夜里开车的时候你开着车灯，车灯不能太亮以防遭到空袭，所以他涂了车灯。我就在一旁看着他。然后他把我抱起来，又一次的，然后他上了车。我开始控制不住的哭泣。我们的邻居Sharlon，他年岁太高不能服役。他站在一边，我们一起看着我爸爸开车走了。他把我抱起来，我还在哭，他看着我说：“去当兵吗？”
+现在我要给大家讲两个我自己的故事。这两个故事乍听起来毫不相关，但如果大家听明白了的话，就会发现它们息息相关。第一个故事不轻松；另一个也不轻松。
+
+1.我的第一个人生记忆，大家知道当人们开始记事的时候记得的第一件事就是第一个人生记忆。我的第一个人生记忆是发生在1973年9月，那时我快满三岁了。那天是赎罪日，一年当中最神圣的一天。我记得我当时在家，突然电话响了。我的父母是非常正统的教徒，我从小成长在正统的家庭里。我们的电话在安息日、周六都不会响的，更不要说赎罪日了。但是这天电话响了。我记得他们当时跳了起来，向电话奔去。我爸爸拿起了电话，我当时站在父母中间，我爸爸看着我妈妈小声说着什么，我听不清，但是我看到我妈妈的脸色变了。我从她眼里看到了恐惧。我哭了起来，我爸爸把我抱起来，他对我说：“我要离开几天，不过我会回来的。”现在我知道当时发生了什么事。当时我父母接到我叔叔打来的电话，他当时在军队服役，在情报部门，他说战争爆发了。在以色列一年当中最神圣的一天，年轻人，以色列军队当时都不在边防线上，完全出乎大家的意料，5个阿拉伯国家同时向以色列宣战。我爸爸把我放下来，走进他的房间，一切仍历历在目。我看到他拿出自己的军装，穿好，拿出他的M16自动步枪，背好，穿上鞋，系好鞋带。我妈妈一直在他身边帮他整理，他们交谈当中偶尔会向我微笑一下，但是我感到一种紧张不安。我不明白为什么，然后我们一起下楼走到我爸爸的车旁边。他当时有一辆老式的绿色福特跑天下。他把鞋油拿出来，涂在车前灯上。为什么呢？也是后来我才知道，因为在夜里开车的时候你开着车灯，车灯不能太亮以防遭到空袭，所以他涂了车灯。我就在一旁看着他。然后他把我抱起来，又一次的，然后他上了车。我开始控制不住的哭泣。我们的邻居Sharlon，他年岁太高不能服役。他站在一边，我们一起看着我爸爸开车走了。他把我抱起来，我还在哭，他看着我说：“去当兵吗？”
 
 之后将近20年我再也没哭过。我上了哈佛大学，我开始学心理学。你们知道我要讲什么是吧？我开始学心理学，我知道自己想要做的，想要做的最重要的事情之一就是找到自己女性化的一面，雌雄同体。我想要找到自己女性化的一面是因为我知道压抑情感是不健康的，我压抑痛苦的情绪，同时也压抑积极正面的情绪。因为是同一条情绪通路，但是我在一个非常强调男子气概的文化环境中长大。男人不哭。士兵不哭。我们很坚强可以搞定任何事情。这是我长大的文化背景。而且那是我人生的第一个回忆。之后我反复听过同样的话无数次，传递的都是同样的讯息——这样不行，表露情绪一点也不爷们。我现在想起来，那时候我输掉了对于我来说最重要的壁球比赛，全国冠军。之前的一年我是冠军。当时我很震惊，我本不该输掉本该赢的。之后我和女朋友一起回家，我们就是一起消磨时间，突然间她哭了起来，因为她明白这场比赛对于我有多重要。这就是我在童年，青少年阶段的体验——要坚强。要像个男人。然后我来到这里。我明白我要释放出来，我要找到自己女性化的一面。这就是我的第一个故事。
 
-现在让我来讲第二个故事。我以前的一个学生，你们当中可能有人认识她，她是04届毕业的叫Lindsay Hyde，在我这里学习。我们也有一对一教学，经常一起学习。组织的创始人，一个非常棒的组织，隶属于菲利普斯布鲁克斯内务协会，现在已是全国性的组织，我也是筹款委员会的一员，有兴趣的人可以去他们的网站swsg.org看看。Lindsay邀请我给波士顿其它院校的女会员作报告，于是我去做了一个报告。照片上的就是Lindsay。这是她和一个三年级学生在一起。她还有其他几位哈佛学生是这个学生的导师，他们一起做了很多很棒的事。我非常相信这个机构的理念，几乎从筹备的最初阶段我就支持他们，所以我做了一个报告，这个报告是关于模范人物的重要性，关于诚实。我跟他们讲了Marva Collins，讲了他们要做的重要工作。我觉得对于我和所有与会者来说整个报告进行的非常顺利。最后我收到了一份表示感激的礼物，礼物是一件衬衣，这可不是普通的衬衣，是一件粉色的衬衣。这个颜色我平时不穿，当然在以色列我从来没穿过，因为这是一件'顽强女人顽强女生'衬衣。这衬衣不仅是粉色的，而且尺码还很小，给三年级学生穿应该比较合适。但是他们还是对我说：“'我们希望你能收下这份表达我们谢意的礼物。”然后我就犯了一个错误。我当然是在开玩笑，当时我在教1504课程，我开玩笑的说：“这就是我收到的那件衬衫。”我在1504班上的另一个学生——Tory Martin，她在Lindsay走后接管了这个机构，她当时是主席。然后我又笑了，然后我差一点就哭了。“我是开玩笑的，”她说，“你看，你不是刚给我们讲过诚实的重要性么？”我的确是讲了。你们看这里，诚实。我说：“好吧我讲了，我现在怎么办？”诚实可是我的核心价值之一，然后我的眼前闪过了我的整个童年，然后我就想到了丘吉尔说过的一句话。于是我一直在寻找转机，现在转机来了，就在这件粉色衬衫上，让我找到自己女性化的一面。
+2.现在让我来讲第二个故事。我以前的一个学生，你们当中可能有人认识她，她是04届毕业的叫Lindsay Hyde，在我这里学习。我们也有一对一教学，经常一起学习。组织的创始人，一个非常棒的组织，隶属于菲利普斯布鲁克斯内务协会，现在已是全国性的组织，我也是筹款委员会的一员，有兴趣的人可以去他们的网站swsg.org看看。Lindsay邀请我给波士顿其它院校的女会员作报告，于是我去做了一个报告。照片上的就是Lindsay。这是她和一个三年级学生在一起。她还有其他几位哈佛学生是这个学生的导师，他们一起做了很多很棒的事。我非常相信这个机构的理念，几乎从筹备的最初阶段我就支持他们，所以我做了一个报告，这个报告是关于模范人物的重要性，关于诚实。我跟他们讲了Marva Collins，讲了他们要做的重要工作。我觉得对于我和所有与会者来说整个报告进行的非常顺利。最后我收到了一份表示感激的礼物，礼物是一件衬衣，这可不是普通的衬衣，是一件粉色的衬衣。这个颜色我平时不穿，当然在以色列我从来没穿过，因为这是一件'顽强女人顽强女生'衬衣。这衬衣不仅是粉色的，而且尺码还很小，给三年级学生穿应该比较合适。但是他们还是对我说：“'我们希望你能收下这份表达我们谢意的礼物。”然后我就犯了一个错误。我当然是在开玩笑，当时我在教1504课程，我开玩笑的说：“这就是我收到的那件衬衫。”我在1504班上的另一个学生——Tory Martin，她在Lindsay走后接管了这个机构，她当时是主席。然后我又笑了，然后我差一点就哭了。“我是开玩笑的，”她说，“你看，你不是刚给我们讲过诚实的重要性么？”我的确是讲了。你们看这里，诚实。我说：“好吧我讲了，我现在怎么办？”诚实可是我的核心价值之一，然后我的眼前闪过了我的整个童年，然后我就想到了丘吉尔说过的一句话。于是我一直在寻找转机，现在转机来了，就在这件粉色衬衫上，让我找到自己女性化的一面。
 
 女士们，先生们，你们也许不会相信，但还是相信我，当我说这个对于我来说是在我的舒适区之外，实际上这已经都不在我的学习区之内了，已经到我的恐慌区了。上课之前备课的时候，你们知道我都是要做笔记的，所以我在这里写下要干什么。我跟助教们说，我刚写进笔记的时候，每次看过去，我都感到肾上腺素在胃里飙升。这就是在舒适区之外。现在我也是在舒适区之外。这就是为什么我要在下课前而不是刚上课的时候干这件事。关键是要达到最适度的不适感，我可能的确是有点太吓人了。但是关键是最适度的不适感。为什么呢？想要改变别无他法，我可以想一天想破头，一直说我要找到女性化的一面，我要更勇敢，我要释放出来，我可以想一整天，什么也不会发生的，什么也不会发生的，除非我们有真正的实质的行为改变，真正的实质的行为动作。当我们做到这一点的时候就天高任鸟飞了。
 
