--- a/11.md
+++ b/11.md
@@ -2,7 +2,7 @@
 
 大家早上好！首先今天在座的有低年级父母吗？欢迎，欢迎，非常高兴你们能来。我更高兴你们周二没有来。我...要先宣布一点事，周二之后我一直问自己：“他们以后还会不会认真听我的话了。我希望如此，或者他们明天还会喜欢我吗？”
 
-好了，还是先宣布点事情吧。首先，我收到很多关于论文的邮件，你们写的感谢信也需要提交给你们的助教作为论文所以我的回答既不肯定也不否定。好了，也就是对你得提交，不过如果那封信过于私人，或者由于任意原因你不太愿意提交给你的助教，就直接给助教发“我写了那封信”，我们会信任你的，所以不是一定要提交。虽然最好是能提交。
+好了，还是先宣布点事情吧。**首先**，我收到很多关于论文的邮件，你们写的感谢信也需要提交给你们的助教作为论文所以我的回答既不肯定也不否定。好了，也就是对你得提交，不过如果那封信过于私人，或者由于任意原因你不太愿意提交给你的助教，就直接给助教发“我写了那封信”，我们会信任你的，所以不是一定要提交。虽然最好是能提交。
 
 一个半礼拜之后就要期中考，所以关于期中考我说几句。我们打算期中考，只出选择题，会有...不太记得了多少道。五十?五十道选择题。有75分钟的作答时间，这样就可以留出十分钟到十五分钟的时间来组织秩序。考试不会太难，要愚弄或是考倒你们，而是会考得很直接。
 
