--- a/15.md
+++ b/15.md
@@ -1,19 +1,19 @@
 **\[第15集\] 完美主义**  
-大家好，上节课我们学到了休整，时不时地放下工作，放松一下自己。我想邀请你们参加一项传统并且有历史渊源的休整节目，犹太安息日。这周五晚上，哈佛的Howard Hill和Hervat将邀请大家来Mac中心享用犹太安息日大餐，欢迎来到Mac中心的露天平台，和你的朋友们一起享用免费大餐，我们的Tal Ben-shahar教授将发表讲话，中心将于六点半开门，晚上七点开始，如果想参加请迅速在Shiva1000.org上回复。所以人都欢迎前来。
+大家好，上节课我们学到了休整，时不时地放下工作，放松一下自己。我想邀请你们参加一项传统并且有历史渊源的休整节目，犹太安息日。这周五晚上，哈佛的Howard Hill和Hervat将邀请大家来Mac中心享用犹太安息日大餐，欢迎来到Mac中心的露天平台，和你的朋友们一起享用免费大餐，我们的Tal Ben-shahar教授将发表讲话，中心将于六点半开门，晚上七点开始，如果想参加请迅速在shiva1000.org上回复。所以人都欢迎前来。
 
 大家好，我还被要求替女子垒球队通知大家。她们原来是要到这里通知大家的，但是她们现在正在进行一场比赛，一场被拖延的比赛。这周六和这周日都有比赛。还有男子棒球队，所以请你们去为她们欢呼，还有一个通知，他们听不见，抱歉，好的。好的，就是5月21号，九点十五分开始决赛。希望你们可以过去看看。是周一，好的。
 
 每年只要我一讲到完美主义的课，就有点坏事发生，第一年，我是记得我把电脑放在家里，第二年投影仪有坏了。而这一年我忘了带电源线了，把电源线放在家里，所以希望这点电源支持一个学期。如果不行的话，我们只能面对不完美了。但是其实也没关系的。这肯定是潜意识的问题。因为这也太巧合了，每次都有这些事情发生。
 
-的确是这样，那么上次我们讲到哪了，上次我们讲到你们是如何学会走路的，我们讲到你们是怎么学会画圆圈的，都是通过不断的失败。如爱迪生所说，“我通过不断失败以致成功。”我们从那些顶尖的运动员身上看到，不管是Babe Ruch还是迈克乔丹，我们从最顶尖的生意人身上看到，不管是IBM创始人Thomas Watson还是Anita Roddick美体小铺的创始人，我们从艺术家和科学家身上看到，最成功的人也是失败最多的人。而他们就是那些，深刻明白失败的价值和重要性的人，我向你们保证他们没人喜欢失败，失败让人受伤，让人极度失望，让人沮丧，也经常使人尴尬，但是那些最为成功的人，都会认识到失败和从失败中学习的价值，有一本非常好的书，是由我的一位导师最近完成的，他在商学院教了几年书，他是一名在南加州任职的教师Warren Bennis。Warren Bennis写了一本书叫做《极客与怪杰》，在这本书里，他将非常年轻的顶多30岁出头的年轻的成功人士和老一代的真正有所成就的跨时代领袖人物，他们躲在七十岁八十岁甚至九十岁以上。他将两组人进行了对比，极客指那些年轻的，怪杰指那些年长的，而他发现，有一些非常有趣而且很有意义的差异，存在于年轻的二十多到三十出头的成功人士和年长的成功领袖之间，其中最明显的差异就是工作与生活的平衡，这对于年轻的成功人士非常重要，非常重要，他们也经常谈论这个。但对于年老一代的成功人士那里，这几乎就是外来观念，这是什么意识啊，为什么会这样呢，因为他们总是处在工作中，在那个样本中所有人都是男性而女性则呆在家里负责生活的那部分，所有说他们的工作和生活的平衡是丈夫负责工作，妻子负责照顾生活。在年轻成功人士的样本里，男女都有。那他们自然会谈到工作和生活的平衡。两代人之间还有其他的不同，但也有一个相同点，这一点对于两代人都是一样的，那就是至少有一次，一般来说是多于一次，显著的失败。Warren Bennis称之为考验，一次灾难。无论是一次重要的竞争失败，或者失去工作还是受到了侮辱失去了亲人。一些严重的失败，一次失败的经历，这是两代人共同拥有的特点，他们都将失败作为一个关键点，一个生活的转折点，一些帮助造就今天的他们的因素。再说一遍，我不是说已经发生的是好事，而是他们能好好利用已经发生的事，每个人都会经历考验，都会面临困难和阻碍，但是那些极度成功的人，如Warren Bennis书里所写到的那些人，和一般人的不同之处在于，他们能够好好的利用已经发生的事情，他们将这些事情看成机遇，一种学习的经历，一块垫脚石，这就是失败对于适应力和完善人格的作用。
+的确是这样，那么上次我们讲到哪了，上次我们讲到你们是如何学会走路的，我们讲到你们是怎么学会画圆圈的，都是通过不断的失败。如爱迪生所说，“我通过不断失败以致成功。”我们从那些顶尖的运动员身上看到，不管是Babe Ruch还是迈克乔丹，我们从最顶尖的生意人身上看到，不管是IBM创始人[托马斯·约翰·沃森](http://www.baidu.com/link?url=vuh8Q30AthNGMk_VkAWFwHqbbqspwQ9d-USrJ7nxNNdQ33cIA61knsG3uYLchT634KJmEsOSUMHxhK-e_55Q6eKvDt3fGGvyJ-yAwsi3tRBr-U7O_V9PmwKykYUfaahx7uk9TQ6HOLBHd8YbGnxrbFaGjtiuXTniWEA-FADw0IWtn6s2IwANizuCeFh5U9h3)、还是美体小铺的创始人Anita Roddick，我们从艺术家和科学家身上看到，**最成功的人也是失败最多的人**。而他们就是那些，深刻明白失败的价值和重要性的人。（那失败的价值和重要性是什么？）我向你们保证他们没人喜欢失败，失败让人受伤，让人极度失望，让人沮丧，也经常使人尴尬，但是那些最为成功的人，都会认识到失败和从失败中学习的价值，有一本非常好的书，是由我的一位导师最近完成的，他在商学院教了几年书，他是一名在南加州任职的教师Warren Bennis。Warren G.Bennis写了一本书叫做[《极客与怪杰》](https://book.douban.com/subject/1012253/)，在这本书里，他将非常年轻的顶多30岁出头的年轻的成功人士和老一代的真正有所成就的跨时代领袖人物----他们都在七十岁八十岁甚至九十岁以上。他将两组人进行了对比，**极客**指那些年轻的，**怪杰**指那些年长的，而他发现，有一些非常有趣而且很有意义的差异，存在于年轻的二十多到三十出头的成功人士和年长的成功领袖之间，其中最明显的差异就是**工作与生活的平衡**，这对于年轻的成功人士非常重要，非常重要，他们也经常谈论这个。但对于年老一代的成功人士那里，这几乎就是外来观念，这是什么意识啊，为什么会这样呢，因为他们总是处在工作中，在那个样本中所有人都是男性而女性则呆在家里负责生活的那部分，所有说他们的工作和生活的平衡是丈夫负责工作，妻子负责照顾生活。在年轻成功人士的样本里，男女都有。那他们自然会谈到工作和生活的平衡。两代人之间还有其他的不同，但也有一个相同点，这一点对于两代人都是一样的，那就是至少有一次，**一般来说是多于一次，显著的失败**。Warren Bennis称之为**考验**，一次灾难。无论是一次重要的竞争失败，或者失去工作还是受到了侮辱失去了亲人。一些严重的失败，一次失败的经历，这是两代人共同拥有的特点，他们都将失败作为一个关键点，一个生活的转折点，一些帮助造就今天的他们的因素。再说一遍，我不是说已经发生的是好事，而是他们能好好利用已经发生的事，每个人都会经历考验，都会面临困难和阻碍，但是那些极度成功的人，如Warren Bennis书里所写到的那些人，和一般人的不同之处在于，他们能够好好的利用已经发生的事情，他们将这些事情看成机遇，一种学习的经历，一块垫脚石，**这就是失败对于适应力和完善人格的作用。**
+
+----
 
 我们继续来定义一下完美主义吧。因为现在有很多的定义。我们经常提及这个词，但我所要说的完美主义是什么？我的定义是一种充斥在我们生活中的对失败的失能性恐惧。尤其是在我们最在意的方面，主义“失能性这个词”，不只是对失败的恐惧。好吧，我也不认识哪怕一个不害怕失败也不会因为失败而感到尴尬或沮丧的人。这是很自然的，这是人性，不管我们喜欢不喜欢，但对失败的失能性恐惧是一种让我们在面对问题的时候裹足不前的恐惧。而我要在这个定义中强调的另一点是“尤其是我们最在意的方面”。你们也明白，我在玩大富翁的时候可不是完美主义者，这也不是因为我的确很有竞争力，但对我来说胜败不重要。但是完美主义确实是我生活的重心，比如说，就如同我提到的壁球对我来说非常重要，学术对我而言也非常重要，和别人的关系对我来说也非常才重要。在这些方面，我就体会到了完美主义。也是在这些方面，我必须并且一直在努力。在这些方面，让我详细说明一下，这是我们在面对人生的旅途的时候，也是我们从A点到B点的过程中，采取的一种方式，一种认知和情感的基模。重点在旅途上面，一个最求卓越的人仍可能和完美主义者一样。或者比完美主义者更有野心，两者之间的不同，在于他们面对旅途的方式。我来举个例子，首先是完美主义者，他正站在A点，他想到B去，什么是最完美最有效的方式呢?就是直的路线。这就是完美主义者在面对旅途时所抱有的认知和情感的基模，怎么从起点到终点？一个最求卓越的人，和完美主义者一样雄心勃勃，也想从A点到B点去，没什么不一样。不同之处哪里？对于这段旅途，认知基模上的不同。最求卓越的人明白，当他进步的时候，不可避免的会遭遇失败，一个最求卓越的人明白，有时候他不一定能拿他想要的分数，但他会吸取教训，一个也明白在恋爱关系之中，根本就没有完美的恋爱关系，所以他会犯错，她也会犯错，但他们都会不断地吸取教训，然后他们的感情不断地变得更加牢固。最求卓越的人明白，他需要不断的失败，五次十次有时候一万次，就如同我们了解的爱迪生的故事一样。一样的野心勃勃，但是基模有所不同。我必须画出许多不好的圆圈，在你们画出Vicent之前画出的那个圆之前。
 
 现在的问题是哪个才更现实？拥有这样的基模是否现实（直线基模）？或者说这个（非直线型）才比较现实？我想这是很明显的。要达到成功可没有直线的捷径。要达成一段快乐的恋情也没有捷径。要发明电灯泡也没有捷径。学好心理学也没有。想成为好的父母和朋友也没有，我们会犯错。而且自然的规则我们必须遵守。追求卓越就是要克服困难，是啊，我也希望我能直线的从A到B。我希望我能做到，我希望我不必经历失败，我不喜欢不断地失败和打壁球输掉，我当然也不会喜欢和我的妻子意见不合，我甚至希望宁愿没有万有引力定律，然后我就可以到处飞或者到处飘。这是现实，而这就是幻想了。当我们的心中存在这个基模的时候，我们就让自己反抗自然规律，就如同我们不接受万有引力定律的话，我们的生活就会充满不可和沮丧，我们活着，那么多人也活着，哈佛有不少人，不只哈佛，所以地方都有，时常沮丧，因为在他们心里一直有这样的基模，再说一遍，这不是说我们该享受失败，但但我们有这样的基模的时候，同时又不享受失败，我们就会因为难以接受事实而沮丧，拥有这样的基模也会有后果的，我就想讨论一下这样的后果，怀有拥有这种基模的人的一些特征。根本就没有完美的完美主义者，就如我说的我们都存在一个闭区间内，确实有些人，确实有很多人更接近这个区间的这端，我想和你们分享这些特征，都是那些，都是那些记载在文学作品之内的，有很多人都拥有这样的特征，你们大多或多或少都拥有一些这样的特征，而不是别的特征，这也没关系。所以这些特征，除了都已被心理学著作，详述之外，我都有过体会，或现在仍有所体会，所以这些特征对我来说具有一定的意义。他们本身也非常常见。
 
 第一个是自卫性。在争论和讨论中，完美主义中都有自卫性。为什么？因为批评在定义上就是一种对于我们的直线方式的偏离，这就是不完美，这就是一种挑刺。就是我没做到完美的事情，我们都不喜欢偏离我们所持基模的东西，记住了，我们的心是不喜欢内在和外在之间的脱节的，我们需要的是平衡是一致，我们不喜欢横生枝节，而如果我们心中抱有的是完美主义的基模，而批评又是对其的偏离，我们就会变得有自卫性，这是我多次有所感受的。并且也是我一直在努力解决的。附带一提，或者说正好相反，一个最求卓越的人是心胸开阔的。他会欢迎是不是的建议和批评，这不是说他或她喜欢这样，而是他或她明白这是必要的。这是成长和发展的必要部分，完美主义者只注意到空着的那半个杯子。为什么？因为完美主义者为失败所困扰，被对直线的完美方式的偏离所困扰。而不管是什么，困扰我们的就是我们说关注的，他或她一直关注未能完成的东西，关注潜在的可能失败或者真正的失败。追求卓越的人，则会关注已经满的那半个杯子。为什么？因为他或她既享受达成目标，又学会享受过程中的每一步，那就是旅途。即便是失败也能是机遇。
-
----------------------------------------------木子整理-------------------------------------------------------------------------
 
 完美主义者会过度一般化夸大化问题，非黑即白，要么是完美的，要么是一无是处。我们等一下就能看到，这样的“全部或没有”的对立于现实的方法造成的后果。我们又谈到了明白现实是怎么样的，明白事物的过程是怎么样的。对于完美主义者来说，说没有自我接受的；对于最求卓越的人来说，能够接受现实中存在的各种弯路，而没有一步登天的捷径，能够接受个人的失败，能够接受自己视作一个整体予以接受。对于完美主义者来说，只有一种方式是合适的，并且是固定不变的，没有任何提升的空间，没有任何偏差，更没有问题和错误，只有一种方式，而不是动态的。更有弹性和自发性的过程和旅途，在行为中自我证实。完美主义者恐惧失败，恐惧来自于内心的自己将自己视为失败者的失败，也恐惧他人将自己视为失败者，就是为了维持那完美的幻觉。完美主义者恐惧失败，恐惧来自于内心的。自己将自己视为失败者地失败，也恐惧他人将自己视为失败者。就是为了维持那种完美的幻觉！而不是将失败视为反馈，不是说要享受失败！我还没遇到过享受失败的人！而是要将失败视为一种反馈和成长的机会。完美主义者只想着怎么到达这里，他们只关注这个，只针对目的！直来直去的，别的事情根本不重要！如果它不能让我达到目的的话，但对于追求卓越的人来说，旅途和终点都是成功的一部分。这样的基模上的差异，会导致很多的后果！
 
