--- a/15.md
+++ b/15.md
@@ -1,4 +1,7 @@
 **\[第15集\] 完美主义**  
+
+[TOC]
+
 大家好，上节课我们学到了休整，时不时地放下工作，放松一下自己。我想邀请你们参加一项传统并且有历史渊源的休整节目，犹太安息日。这周五晚上，哈佛的Howard Hill和Hervat将邀请大家来Mac中心享用犹太安息日大餐，欢迎来到Mac中心的露天平台，和你的朋友们一起享用免费大餐，我们的Tal Ben-shahar教授将发表讲话，中心将于六点半开门，晚上七点开始，如果想参加请迅速在shiva1000.org上回复。所以人都欢迎前来。
 
 大家好，我还被要求替女子垒球队通知大家。她们原来是要到这里通知大家的，但是她们现在正在进行一场比赛，一场被拖延的比赛。这周六和这周日都有比赛。还有男子棒球队，所以请你们去为她们欢呼，还有一个通知，他们听不见，抱歉，好的。好的，就是5月21号，九点十五分开始决赛。希望你们可以过去看看。是周一，好的。
@@ -9,7 +12,7 @@
 
 ----
 
-我们继续来定义一下完美主义吧。因为现在有很多的定义。我们经常提及这个词，但我所要说的完美主义是什么？我的定义是一种充斥在我们生活中的对失败的失能性恐惧。尤其是在我们最在意的方面，主义“失能性这个词”，不只是对失败的恐惧。好吧，我也不认识哪怕一个不害怕失败也不会因为失败而感到尴尬或沮丧的人。这是很自然的，这是人性，不管我们喜欢不喜欢，但对失败的失能性恐惧是一种让我们在面对问题的时候裹足不前的恐惧。而我要在这个定义中强调的另一点是“尤其是我们最在意的方面”。你们也明白，我在玩大富翁的时候可不是完美主义者，这也不是因为我的确很有竞争力，但对我来说胜败不重要。但是完美主义确实是我生活的重心，比如说，就如同我提到的壁球对我来说非常重要，学术对我而言也非常重要，和别人的关系对我来说也非常才重要。在这些方面，我就体会到了完美主义。也是在这些方面，我必须并且一直在努力。在这些方面，让我详细说明一下，这是我们在面对人生的旅途的时候，也是我们从A点到B点的过程中，采取的一种方式，一种认知和情感的基模。重点在旅途上面，一个最求卓越的人仍可能和完美主义者一样。或者比完美主义者更有野心，两者之间的不同，在于他们面对旅途的方式。我来举个例子，首先是完美主义者，他正站在A点，他想到B去，什么是最完美最有效的方式呢?就是直的路线。这就是完美主义者在面对旅途时所抱有的认知和情感的基模，怎么从起点到终点？一个最求卓越的人，和完美主义者一样雄心勃勃，也想从A点到B点去，没什么不一样。不同之处哪里？对于这段旅途，认知基模上的不同。最求卓越的人明白，当他进步的时候，不可避免的会遭遇失败，一个最求卓越的人明白，有时候他不一定能拿他想要的分数，但他会吸取教训，一个也明白在恋爱关系之中，根本就没有完美的恋爱关系，所以他会犯错，她也会犯错，但他们都会不断地吸取教训，然后他们的感情不断地变得更加牢固。最求卓越的人明白，他需要不断的失败，五次十次有时候一万次，就如同我们了解的爱迪生的故事一样。一样的野心勃勃，但是基模有所不同。我必须画出许多不好的圆圈，在你们画出Vicent之前画出的那个圆之前。
+我们继续来定义一下**完美主义**吧。因为现在有很多的定义。我们经常提及这个词，但我所要说的完美主义是什么？[^完美主义]**我的定义是一种充斥在我们生活中的对失败的失能性恐惧**。尤其是在我们最在意的方面，主义“失能性这个词”，不只是对失败的恐惧。好吧，我也不认识哪怕一个不害怕失败也不会因为失败而感到尴尬或沮丧的人。这是很自然的，这是人性，不管我们喜欢不喜欢，但对失败的失能性恐惧是一种让我们在面对问题的时候裹足不前的恐惧。而我要在这个定义中强调的另一点是“尤其是我们最在意的方面”。你们也明白，我在玩大富翁的时候可不是完美主义者，这也不是因为我的确很有竞争力，但对我来说胜败不重要。但是完美主义确实是我生活的重心，比如说，就如同我提到的壁球对我来说非常重要，学术对我而言也非常重要，和别人的关系对我来说也非常才重要。在这些方面，我就体会到了完美主义。也是在这些方面，我必须并且一直在努力。在这些方面，让我详细说明一下，这是我们在面对人生的旅途的时候，也是我们从A点到B点的过程中，采取的一种方式，一种认知和情感的基模。重点在旅途上面，一个最求卓越的人仍可能和完美主义者一样。或者比完美主义者更有野心，两者之间的不同，在于他们面对旅途的方式。我来举个例子，首先是完美主义者，他正站在A点，他想到B去，什么是最完美最有效的方式呢?就是直的路线。这就是完美主义者在面对旅途时所抱有的认知和情感的基模，怎么从起点到终点？一个最求卓越的人，和完美主义者一样雄心勃勃，也想从A点到B点去，没什么不一样。不同之处哪里？对于这段旅途，认知基模上的不同。最求卓越的人明白，当他进步的时候，不可避免的会遭遇失败，一个最求卓越的人明白，有时候他不一定能拿他想要的分数，但他会吸取教训，一个也明白在恋爱关系之中，根本就没有完美的恋爱关系，所以他会犯错，她也会犯错，但他们都会不断地吸取教训，然后他们的感情不断地变得更加牢固。最求卓越的人明白，他需要不断的失败，五次十次有时候一万次，就如同我们了解的爱迪生的故事一样。一样的野心勃勃，但是基模有所不同。我必须画出许多不好的圆圈，在你们画出Vicent之前画出的那个圆之前。
 
 现在的问题是哪个才更现实？拥有这样的基模是否现实（直线基模）？或者说这个（非直线型）才比较现实？我想这是很明显的。要达到成功可没有直线的捷径。要达成一段快乐的恋情也没有捷径。要发明电灯泡也没有捷径。学好心理学也没有。想成为好的父母和朋友也没有，我们会犯错。而且自然的规则我们必须遵守。追求卓越就是要克服困难，是啊，我也希望我能直线的从A到B。我希望我能做到，我希望我不必经历失败，我不喜欢不断地失败和打壁球输掉，我当然也不会喜欢和我的妻子意见不合，我甚至希望宁愿没有万有引力定律，然后我就可以到处飞或者到处飘。这是现实，而这就是幻想了。当我们的心中存在这个基模的时候，我们就让自己反抗自然规律，就如同我们不接受万有引力定律的话，我们的生活就会充满不可和沮丧，我们活着，那么多人也活着，哈佛有不少人，不只哈佛，所以地方都有，时常沮丧，因为在他们心里一直有这样的基模，再说一遍，这不是说我们该享受失败，但但我们有这样的基模的时候，同时又不享受失败，我们就会因为难以接受事实而沮丧，拥有这样的基模也会有后果的，我就想讨论一下这样的后果，怀有拥有这种基模的人的一些特征。根本就没有完美的完美主义者，就如我说的我们都存在一个闭区间内，确实有些人，确实有很多人更接近这个区间的这端，我想和你们分享这些特征，都是那些，都是那些记载在文学作品之内的，有很多人都拥有这样的特征，你们大多或多或少都拥有一些这样的特征，而不是别的特征，这也没关系。所以这些特征，除了都已被心理学著作，详述之外，我都有过体会，或现在仍有所体会，所以这些特征对我来说具有一定的意义。他们本身也非常常见。
 
@@ -19,7 +22,7 @@
 
 我在这里列举一些。第一个就是完美主义者只能感受到，最多也只是，暂时性的轻松！是的！他们会感受到持续的压力，但当他们达到目的以后，他们感到了轻松！这就是典型的逐利者！
 
-我来给你们讲一个这样逐利者的例子！一个人，我们姑且称他为X先生，去上学了，上学。在那之前，他一直很享受学前的生活！而他上学以后，就开始有压力了。因为他明白，他必须很努力地读书。并取得非常好的成绩来上一个好初中。因为他父母想让他进的那所初中，竞争很激烈非常不好进。他确实进了一间不错的小学。但是现在他要为初中而努力了，所以他有了压力，他并不享受小学生活。但他确实感受到轻松，在假期到来的时候，在全家去度假或者考试结束的时候，在他可以不用担心考试和朋友玩的时候，他经过了小学阶段，却不怎么喜欢。他感受到轻松，却丝毫没有感受到在他还在幼儿园的时候感受过的那种：对于学习的热情与喜爱。他后来进入了梦想中的初中。那所他一直想要进入的初中，他做到了，他只在前两周里感觉非常高兴。因为他要开始考虑，他梦想中的高中了。为什么？因为那所高中，是进入全国最好的那些大学的垫脚石。他也很想进入间全国最好的大学。所以他在初中又很努力地学习！他并不怎么享受这样努力的过程.但是他成功了，他进入了梦想中的高中，他很兴奋，从来没有这么高兴过！因为他已经是全国最出色的孩子中的一员。进这所高中不容易，但是他做到了。然后他又开始学习，他又只开心一周，压力又来了。因为这所高中里面竞争非常激烈。他必须加入两个运动队，还有三个学生组织，因为他必须充实他的简历好让自己进入梦想中的大学。他过的很挣扎，一点意思也没有。但是他对自己说：“这只是暂时的，痛苦是短暂的，等我进入了全国最优秀的大学就会有回报的”然后他付诸行动。在4月2号，一封信来了！信的信封很大，他打开信知道自己成功了。他又感到非常的兴奋，甚至比进入高中时还高兴，然后他说：‘现在，我终于能放手，好好的放松一下了。因为我已经进了这间大学，我的人生从此稳定下来了！’接下来他十分享受高中的最后一年，还有假期以及进入大学的第一周，他很兴奋，这位X先生。但是在第一周过去后，压力又出现了，因为很快就会到其中考试。而很快又会出现激烈的竞争。并且每个人都和他一样努力，因此他也必须非常的努力。因为他想得到他的梦想中的工作，他在大一暑假的时候得到了理想的实习机会，但是压力又继续出现了，他感受过轻松，也感受过愉快的时光。但是这些都是在考试结束以后。或者假期即将到来之前，或者是在假期期间。但是每次都一样，压力又出现了，他自己也不明白为什么他不开心。因为这一切都是他想要的，他非常想要这些，多于别的一切。他说：“好的，只要我得到这份工作就好了！为什么？因为那份工作能让我进入最好的商学院。这能让我在一千六百个一同毕业的人中脱颖而出！”所以他继续努力，继续充实他的简历！他是三个学生组织的成员，担任两个的部长！是两个大学运动预备队员，一个正式队员。还要加上每学期五门甚至六门课。为什么？因为这很困难，竞争很激烈。这就是适者生存，不付出就没有收获！大学最后一年到来了，他又有压力了。但是他得到了那份工作，他很高兴！这就是他想要的.这就是他所预想的。现在他很高兴，然后8月3号到了。是他正式开始工作的第一天，他上班去了。他周围的所有人都是最高等学府的。毕业生都是最优秀学校的学生。他觉得已经功成名就，却只高兴了两周，因为在两周以后，他又感受到了非常大的压力！比大学里的压力还要大。他没有时间再像大学里面一样在饭堂里悠闲地吃饭。他每周工作八十到九十小时，一点也不享受！但是他会做到的，他会做得很好的！他会得到一封很好的进商学院的推荐信。在从商学院毕业以后，找到一个真正的理想工作并享受生活！然后他真的进了最高的商学院，也找到了他最好的工作。工作上，作为一个员工，他很高兴！事实上他甚至不敢相信自己的好运！他赚钱赚的很多，那三年前看起来难以忍受的助学贷款，现在一下子就还清了。他感觉很棒，他有了一间很不错的公寓.他成了员工，他很兴奋。他很高兴，“我终于做到了！”但是过了几个月，压力又回来了.因为他只是一个员工。他非常非常想成为合伙人。但当他成为合伙人以后，当他获得了“终身任期”以后，他的生活就可以安顿下来了。他继续努力工作，奋力拼搏。他不怎么喜欢他的工作，只要再努力多一点，在忍耐多一点痛苦，然后就会有真正的回报了。在艰苦努力了五年以后，他有做到了，他成为了合伙人，事实上，也是那个公司历史上最年轻的合伙人.他很兴奋。他休了一个长假，然后回来工作。斗志满满，因为他现在是所有者。是这个著名的公司的所有者之一。现在他也已经成家了。他买下了市郊的一所大房子，非常贵。但他轻易买下了，他也买了一辆豪华车。他还有了一个司机，他感觉真的功成名就了。他感觉良好地过了3个月，压力又来了！因为他只是一个初级的合伙人，他能成为高级合伙人吗？这可能吗？好吧！只有努力工作才可能。因为没多少人能爬到金字塔那么高的位置！越来越难了，但是他会成功的。他挣扎着，忍受着，一点意思也没有。但是他成功了，没有付出就没有回报。这一次，他在Hamptons区买了一栋房子，用来度假和休息。还有一辆新车，更大也更快！然后他说：“我终于，终于能够放松了！”然后他开始放松自己，过了两个半月，压力又来了，因为他只是个高级合伙人，但是常务董事只有一个，想得到那个位置是非常困难的。但是他决心要当上常务董事。他一直是明星级人物，没理由止步不前，这对他来说没什么乐趣可言。他没有花多少时间和他爱的人在一起，而因为他心中的焦虑他必须证明自己。足足花了七年时间，在这七年里，他在物质上已经很富足了，只是愈发缺乏时间，他不断的奋斗，最后终于成功了！董事会发表了人名声明，他登上了华尔街日报的头版新闻。X先生成为了这件传奇公司的常务董事，他的朋友祝贺他，他感到万分自豪，他很快乐。但是随后焦虑回来了，有一天他走进办公室里，坐在椅子上，脚搭在桌子上。他已经成了老板，成了掌门人，他回头就可以看见中央公园，那景色实在是太美了。他真的是而不是修辞的说，他真的站在了世界之巅。然后有人敲门了，他被敲门声吓了一跳，因为一般来了人他的秘书会向他通报，访客不会就这么过来敲门。毕竟他是站在世界之巅的人。于是他走过去开了门。来人是董事会主席，他们俩互相打了个招呼。然后董事会主席说‘今年的盈利记录，非常棒，不可思议，您做的太好了！我们都为您而骄傲，感谢您的存在！但是，您应该退休了，您已经72岁了。’这就是逐利者的生活。
+我来给你们讲一个这样逐利者的例子！一个人，我们姑且称他为X先生，去上学了，上学。在那之前，他一直很享受学前的生活！而他上学以后，就开始有压力了。因为他明白，他必须很努力地读书。并取得非常好的成绩来上一个好初中。因为他父母想让他进的那所初中，竞争很激烈非常不好进。他确实进了一间不错的小学。但是现在他要为初中而努力了，所以他有了压力，他并不享受小学生活。但他确实感受到轻松，在假期到来的时候，在全家去度假或者考试结束的时候，在他可以不用担心考试和朋友玩的时候，他经过了小学阶段，却不怎么喜欢。他感受到轻松，却丝毫没有感受到在他还在幼儿园的时候感受过的那种：对于学习的热情与喜爱。他后来进入了梦想中的初中。那所他一直想要进入的初中，他做到了，他只在前两周里感觉非常高兴。因为他要开始考虑，他梦想中的高中了。为什么？因为那所高中，是进入全国最好的那些大学的垫脚石。他也很想进入间全国最好的大学。所以他在初中又很努力地学习！他并不怎么享受这样努力的过程.但是他成功了，他进入了梦想中的高中，他很兴奋，从来没有这么高兴过！因为他已经是全国最出色的孩子中的一员。进这所高中不容易，但是他做到了。然后他又开始学习，他又只开心一周，压力又来了。因为这所高中里面竞争非常激烈。他必须加入两个运动队，还有三个学生组织，因为他必须充实他的简历好让自己进入梦想中的大学。他过的很挣扎，一点意思也没有。但是他对自己说：“这只是暂时的，痛苦是短暂的，等我进入了全国最优秀的大学就会有回报的”然后他付诸行动。在4月2号，一封信来了！信的信封很大，他打开信知道自己成功了。他又感到非常的兴奋，甚至比进入高中时还高兴，然后他说：‘现在，我终于能放手，好好的放松一下了。因为我已经进了这间大学，我的人生从此稳定下来了！’接下来他十分享受高中的最后一年，还有假期以及进入大学的第一周，他很兴奋，这位X先生。但是在第一周过去后，压力又出现了，因为很快就会到其中考试。而很快又会出现激烈的竞争。并且每个人都和他一样努力，因此他也必须非常的努力。因为他想得到他的梦想中的工作，他在大一暑假的时候得到了理想的实习机会，但是压力又继续出现了，他感受过轻松，也感受过愉快的时光。但是这些都是在考试结束以后。或者假期即将到来之前，或者是在假期期间。但是每次都一样，压力又出现了，他自己也不明白为什么他不开心。因为这一切都是他想要的，他非常想要这些，多于别的一切。他说：“好的，只要我得到这份工作就好了！为什么？因为那份工作能让我进入最好的商学院。这能让我在一千六百个一同毕业的人中脱颖而出！”所以他继续努力，继续充实他的简历！他是三个学生组织的成员，担任两个的部长！是两个大学运动预备队员，一个正式队员。还要加上每学期五门甚至六门课。为什么？因为这很困难，竞争很激烈。这就是适者生存，不付出就没有收获！大学最后一年到来了，他又有压力了。但是他得到了那份工作，他很高兴！这就是他想要的.这就是他所预想的。现在他很高兴，然后8月3号到了。是他正式开始工作的第一天，他上班去了。他周围的所有人都是最高等学府的。毕业生都是最优秀学校的学生。他觉得已经功成名就，却只高兴了两周，因为在两周以后，他又感受到了非常大的压力！比大学里的压力还要大。他没有时间再像大学里面一样在饭堂里悠闲地吃饭。他每周工作八十到九十小时，一点也不享受！但是他会做到的，他会做得很好的！他会得到一封很好的进商学院的推荐信。在从商学院毕业以后，找到一个真正的理想工作并享受生活！然后他真的进了最高的商学院，也找到了他最好的工作。工作上，作为一个员工，他很高兴！事实上他甚至不敢相信自己的好运！他赚钱赚的很多，那三年前看起来难以忍受的助学贷款，现在一下子就还清了。他感觉很棒，他有了一间很不错的公寓.他成了员工，他很兴奋。他很高兴，“我终于做到了！”但是过了几个月，压力又回来了.因为他只是一个员工。他非常非常想成为合伙人。但当他成为合伙人以后，当他获得了“终身任期”以后，他的生活就可以安顿下来了。他继续努力工作，奋力拼搏。他不怎么喜欢他的工作，只要再努力多一点，在忍耐多一点痛苦，然后就会有真正的回报了。在艰苦努力了五年以后，他有做到了，他成为了合伙人，事实上，也是那个公司历史上最年轻的合伙人.他很兴奋。他休了一个长假，然后回来工作。斗志满满，因为他现在是所有者。是这个著名的公司的所有者之一。现在他也已经成家了。他买下了市郊的一所大房子，非常贵。但他轻易买下了，他也买了一辆豪华车。他还有了一个司机，他感觉真的功成名就了。他感觉良好地过了3个月，压力又来了！因为他只是一个初级的合伙人，他能成为高级合伙人吗？这可能吗？好吧！只有努力工作才可能。因为没多少人能爬到金字塔那么高的位置！越来越难了，但是他会成功的。他挣扎着，忍受着，一点意思也没有。但是他成功了，没有付出就没有回报。这一次，他在Hamptons区买了一栋房子，用来度假和休息。还有一辆新车，更大也更快！然后他说：“我终于，终于能够放松了！”然后他开始放松自己，过了两个半月，压力又来了，因为他只是个高级合伙人，但是常务董事只有一个，想得到那个位置是非常困难的。但是他决心要当上常务董事。他一直是明星级人物，没理由止步不前，这对他来说没什么乐趣可言。他没有花多少时间和他爱的人在一起，而因为他心中的焦虑他必须证明自己。足足花了七年时间，在这七年里，他在物质上已经很富足了，只是愈发缺乏时间，他不断的奋斗，最后终于成功了！董事会发表了人名声明，他登上了华尔街日报的头版新闻。X先生成为了这件传奇公司的常务董事，他的朋友祝贺他，他感到万分自豪，他很快乐。但是随后焦虑回来了，有一天他走进办公室里，坐在椅子上，脚搭在桌子上。他已经成了老板，成了掌门人，他回头就可以看见[ce](#ceshi)中央公园，那景色实在是太美了。他真的是而不是修辞的说，他真的站在了世界之巅。然后有人敲门了，他被敲门声吓了一跳，因为一般来了人他的秘书会向他通报，访客不会就这么过来敲门。毕竟他是站在世界之巅的人。于是他走过去开了门。来人是董事会主席，他们俩互相打了个招呼。然后董事会主席说‘今年的盈利记录，非常棒，不可思议，您做的太好了！我们都为您而骄傲，感谢您的存在！但是，您应该退休了，您已经72岁了。’这就是逐利者的生活。
 
 最佳情况下，当然这只是大概的描述。我只是着重描述了几个特殊的阶段，这也不是要么全部，要么没有，但是，总的来说，这就是逐利者的生活。只关注从A点到达B点。然后轻松半个到一个月，然后...B点又变成了新的A点。然后就像一直不断向上爬的老鼠，你们必须现在就问自己，不！现在问那还要等多久？你们必须现在就问自己，“我到底想要什么样的生活？”我给的是一个生意场上的例子，其实对于其它领域也一样！不管你是想成为一个医生，是因为能否上到最好的学校而有压力？是想要最好的公寓？最好的实习机会？最想要的好的，最高的职位等等！或者你是打算为非盈利机构工作。无论你是留在学术界，还是成为律师，都一样，都是在不同领域重复X先生的故事。这样的情况适用于任何方面！问题就是“我们想要什么样的生活？”要记住其中最重要的，一个追求卓越的人，不会放弃自己的雄心！但是，一个追求卓越的人，也不会放弃整个旅途！我们很快也会讲到，追求卓越的人，不仅仅不会放弃整个旅途，或者结果，他们常常会获得更高的成就！我们很快就会讲到，追求卓越的人，并不只关注短时间的放松，还关注长久的满足，是的，生活中会有起起伏伏！但是，也能够享受旅途中的每一天！在大学里的经历，和朋友们美美的吃了一餐的经历，阅读名家的作品的经历，上有趣的课，参加有趣的课外活动的经历，并且重视这样的经历，而不是忽略它们。不是把这些看做普通的，为了成功的最终目的。  
 我们必须经历的事情，你或许会非常渴望成功，但是你所在的却是此时，此地，不是别处。你们也知道，我从来没有，或许你们有，我从来没有遇到过完美的人！我认为这样的人不存在，换句话说，如果根本就不存在完美的人！那么对每个人来说，失败都是不可避免的。为失败所困惑的完美主义者，只是专注于失败而追求卓越的人，则会发现路途上每一步都有成功的机会！甚至在失败中也有这样的机会。完美主义者常常讲时间浪费在必须读清楚每个字，“我要做到最好，拿满分！”要么全部要么没有，要么我交上去一份完美的论文，要么我就干脆不交论文，要么我就拿到A，要么我就一无是处。要么全部，要么没有，有时候这是合适的，有时候追求卓越的人也会持有这种态度！比如，如果你是一个医生，你想做一场完美的手术，你课不会说“好吧!没关系啊！我切对了八块应该切的东西”没错，在有些场合，你会需要完美主义，但是在我们生活中的其它方面，都不必要！甚至会伤害我们。
@@ -64,7 +67,11 @@
 
 视频：威尔和格蕾丝，第三季第十集片段。
 
-不管是要应对上瘾问题，还是对于生活中别的问题，完美主义还是要改善什么，第一步就是要有意识，第二步是专注于努力的嘉奖，Carol Dweck向我们展示的就是当我们专注于努力的时候，我们就能够改变那种根深蒂固的基模，即便这种基模已经存在了多年，所以对于我们自己，或者对别人，我们应专注于旅途。专注，并不一定是嘉奖自己成功，甚至是嘉奖自己的失败自己的尝试，在几个小时内，如Carol Dweck所见，告诉人们他们的心是可以扩展的，告诉他们神经可塑性，并非已经定型，我们仍可以做出改变，积极的接受。我认为Karen Horney她是幸福学创始人之一，她在恐惧症领域做了很多工作，她研究所得的其中一点是恐惧症，它从来不会消失，它是我们的一部分，它会变得更加可控制，但是总是存在，而极度的完美主义也是一种恐惧症，所以关键就是接受它。我总会有完美主义倾向，但是这没关系，但是在以前，我有着极度的完美主义，现在我更加接近追求卓越的极致，这是持续一生的，是不断进行的一个过程，所以现在的关键就是接受，它一直都是我们生活的一部分这一个事实，然后问：“好的，那我该怎么办？”，换句话说就是采取行动，所以举例来说，就是怎么应对，把自己置于线上，我最初所做的，在我留意到我的完美主义与自卫性的时候，我会撇开我的做法并且请求批评，我会问别人“给我点反馈吧”，当我收到反馈的时候，和我的直线有所偏离的时候，我就阻止自己回击。你们也知道，对于完美主义者来说，最好的防守就是进攻，慢慢地我就习惯了，我没那么有自卫性了，我得以创造更高层次的亲密关系了，或者我开始尝试别的领域，那里我可能会遭到否定，让我以一个故事结尾吧。
+不管是要应对上瘾问题，还是对于生活中别的问题，完美主义还是要改善什么，第一步就是要有意识，第二步是专注于努力的嘉奖，Carol Dweck向我们展示的就是当我们专注于努力的时候，我们就能够改变那种根深蒂固的基模，即便这种基模已经存在了多年，所以对于我们自己，或者对别人，我们应专注于旅途。专注，并不一定是嘉奖自己成功，甚至是嘉奖自己的失败自己的尝试，在几个小时内，如Carol Dweck所见，告诉人们他们的心是可以扩展的，告诉他们神经可塑性，并非已经定型，我们仍可以做出改变，积极的接受。我认为Karen Horney她是幸福学创始人之一，她在恐惧症领域做了很多工作，她研究所得的其中一点是恐惧症，它从来不会消失，它是我们的一部分，它会变得更加可控制，但是总是存在，而极度的完美主义也是一种恐惧症，所以关键就是接受它。我总会有完美主义倾向，但是这没关系，但是在以前，我有着极度的完美主义，现在我更加接近追求卓越的极致，这是持续一生的，是不断进行的一个过程，这个在的关键就是接受，它一直都是我们生活的一部分这一个事实，然后问：“好的，那我该怎么办？”，换句话说就是采取行动，所以举例来说，就是怎么应对，把自己置于线上，我最初所做的，在我留意到我的完美主义与自卫性的时候，我会撇开我的做法并且请求批评，我会问别人“给我点反馈吧”，当我收到反馈的时候，和我的直线有所偏离的时候，我就阻止自己回击。你们也知道，对于完美主义者来说，最好的防守就是进攻，慢慢地我就习惯了，我没那么有自卫性了，我得以创造更高层次的亲密关系了，或者我开始尝试别的领域，那里我可能会遭到否定，让我以一个故事结尾吧。
 
-她的名字叫Brittaney，她是一位展示女郎，我们在大学第一周时认识，我对她一见钟情，我们几乎整个第一周都在一起，到那一周的周末，为了克服我的完美主义，我约她出来，她拒绝了，这让我很吃惊，很受伤，但是她确实拒绝了,在大学第二年，我们又见面了，我再次约她出来，她又拒绝了。第三年，在年末的时候，我和另一个人约会去了，所以Brittaney就出局了。后来在我大四的时候我们又见面了，我们谈了些有趣的话题，那时候我已经开始学习心理学了，我也可以读懂她的身体语言，她经常这么弄她的头发，然后我知道她确实很喜欢我，然后我约她出来，她拒绝了，然后我就还留在这里和你们在一起，这就是个很重要的学习过程，学会失败，或败于学习。我们下周见！
+她的名字叫Brittaney，她是一位{#ceshi}展示女郎，我们在大学第一周时认识，我对她一见钟情，我们几乎整个第一周都在一起，到那一周的周末，为了克服我的完美主义，我约她出来，她拒绝了，这让我很吃惊，很受伤，但是她确实拒绝了,在大学第二年，我们又见面了，我再次约她出来，她又拒绝了。第三年，在年末的时候，我和另一个人约会去了，所以Brittaney就出局了。后来在我大四的时候我们又见面了，我们谈了些有趣的话题，那时候我已经开始学习心理学了，我也可以读懂她的身体语言，她经常这么弄她的头发，然后我知道她确实很喜欢我，然后我约她出来，她拒绝了，然后我就还留在这里和你们在一起，这就是个很重要的学习过程，学会失败，或败于学习。我们下周见！
+
+
+
+[^完美主义]: 这个很有价值
 
