--- a/15.md
+++ b/15.md
@@ -12,28 +12,34 @@
 
 ----
 
-我们继续来定义一下**完美主义**吧。因为现在有很多的定义。我们经常提及这个词，但我所要说的完美主义是什么？[^完美主义]**我的定义是一种充斥在我们生活中的对失败的失能性恐惧**。尤其是在我们最在意的方面，主义“失能性这个词”，不只是对失败的恐惧。好吧，我也不认识哪怕一个不害怕失败也不会因为失败而感到尴尬或沮丧的人。这是很自然的，这是人性，不管我们喜欢不喜欢，但对失败的失能性恐惧是一种让我们在面对问题的时候裹足不前的恐惧。而我要在这个定义中强调的另一点是“尤其是我们最在意的方面”。你们也明白，我在玩大富翁的时候可不是完美主义者，这也不是因为我的确很有竞争力，但对我来说胜败不重要。但是完美主义确实是我生活的重心，比如说，就如同我提到的壁球对我来说非常重要，学术对我而言也非常重要，和别人的关系对我来说也非常才重要。在这些方面，我就体会到了完美主义。也是在这些方面，我必须并且一直在努力。在这些方面，让我详细说明一下，这是我们在面对人生的旅途的时候，也是我们从A点到B点的过程中，采取的一种方式，一种认知和情感的基模。重点在旅途上面，一个最求卓越的人仍可能和完美主义者一样。或者比完美主义者更有野心，两者之间的不同，在于他们面对旅途的方式。我来举个例子，首先是完美主义者，他正站在A点，他想到B去，什么是最完美最有效的方式呢?就是直的路线。这就是完美主义者在面对旅途时所抱有的认知和情感的基模，怎么从起点到终点？一个最求卓越的人，和完美主义者一样雄心勃勃，也想从A点到B点去，没什么不一样。不同之处哪里？对于这段旅途，认知基模上的不同。最求卓越的人明白，当他进步的时候，不可避免的会遭遇失败，一个最求卓越的人明白，有时候他不一定能拿他想要的分数，但他会吸取教训，一个也明白在恋爱关系之中，根本就没有完美的恋爱关系，所以他会犯错，她也会犯错，但他们都会不断地吸取教训，然后他们的感情不断地变得更加牢固。最求卓越的人明白，他需要不断的失败，五次十次有时候一万次，就如同我们了解的爱迪生的故事一样。一样的野心勃勃，但是基模有所不同。我必须画出许多不好的圆圈，在你们画出Vicent之前画出的那个圆之前。
+我们继续来定义一下[^1]**完美主义**吧。因为现在有很多的定义。我们经常提及这个词，但我所要说的完美主义是什么？[^完美主义]**我的定义是一种充斥在我们生活中的对失败的失能性恐惧**。尤其是在我们最在意的方面，注意“失能性这个词”，不只是对失败的恐惧。好吧，我也不认识哪怕一个不害怕失败也不会因为失败而感到尴尬或沮丧的人。这是很自然的，这是人性，不管我们喜欢不喜欢，**但对失败的失能性恐惧是一种让我们在面对问题的时候裹足不前的恐惧**。而我要在这个定义（允许自己害怕失败）中强调的另一点是“尤其是我们最在意的方面”。你们也明白，我在玩大富翁的时候可不是完美主义者，这也不是因为我的确很有竞争力，但对我来说胜败不重要。但是完美主义确实是我生活的重心，比如说，就如同我提到的壁球对我来说非常重要，学术对我而言也非常重要，和别人的关系对我来说也非常才重要。在这些方面，我就体会到了完美主义。也是在这些方面，我必须并且一直在努力。在这些方面，让我详细说明一下，这是我们在面对人生的旅途的时候，也是我们从A点到B点的过程中，采取的一种方式，一种认知和情感的基模。重点在旅途上面，一个追求卓越的人仍可能和完美主义者一样，或者比完美主义者更有野心。两者之间的不同，在于他们面对旅途的方式。
 
-现在的问题是哪个才更现实？拥有这样的基模是否现实（直线基模）？或者说这个（非直线型）才比较现实？我想这是很明显的。要达到成功可没有直线的捷径。要达成一段快乐的恋情也没有捷径。要发明电灯泡也没有捷径。学好心理学也没有。想成为好的父母和朋友也没有，我们会犯错。而且自然的规则我们必须遵守。追求卓越就是要克服困难，是啊，我也希望我能直线的从A到B。我希望我能做到，我希望我不必经历失败，我不喜欢不断地失败和打壁球输掉，我当然也不会喜欢和我的妻子意见不合，我甚至希望宁愿没有万有引力定律，然后我就可以到处飞或者到处飘。这是现实，而这就是幻想了。当我们的心中存在这个基模的时候，我们就让自己反抗自然规律，就如同我们不接受万有引力定律的话，我们的生活就会充满不可和沮丧，我们活着，那么多人也活着，哈佛有不少人，不只哈佛，所以地方都有，时常沮丧，因为在他们心里一直有这样的基模，再说一遍，这不是说我们该享受失败，但但我们有这样的基模的时候，同时又不享受失败，我们就会因为难以接受事实而沮丧，拥有这样的基模也会有后果的，我就想讨论一下这样的后果，怀有拥有这种基模的人的一些特征。根本就没有完美的完美主义者，就如我说的我们都存在一个闭区间内，确实有些人，确实有很多人更接近这个区间的这端，我想和你们分享这些特征，都是那些，都是那些记载在文学作品之内的，有很多人都拥有这样的特征，你们大多或多或少都拥有一些这样的特征，而不是别的特征，这也没关系。所以这些特征，除了都已被心理学著作，详述之外，我都有过体会，或现在仍有所体会，所以这些特征对我来说具有一定的意义。他们本身也非常常见。
+​	我来举个例子，**首先是1.完美主义者**，他正站在A点，他想到B去，什么是最完美最有效的方式呢?就是直的路线。这就是完美主义者在面对旅途时所抱有的认知和情感的[^2]基模。怎么从起点到终点？一个追求卓越的人，和完美主义者一样雄心勃勃，也想从A点到B点去，没什么不一样。不同之处哪里？对于这段旅途，**认知基模**上的不同。追求卓越的人明白，当他进步的时候，不可避免的会遭遇失败，一个追求卓越的人明白，有时候他不一定能拿他想要的分数，但他会吸取教训，也明白在恋爱关系之中，根本就没有完美的恋爱关系，所以他会犯错，她也会犯错，但他们都会不断地吸取教训，然后他们的感情不断地变得更加牢固。追求卓越的人明白，他需要不断的失败，五次十次有时候一万次，就如同我们了解的爱迪生的故事一样。一样的野心勃勃，但是基模有所不同。我必须画出许多不好的圆圈，在你们画出Vicent之前画出的那个圆之前。
 
-第一个是自卫性。在争论和讨论中，完美主义中都有自卫性。为什么？因为批评在定义上就是一种对于我们的直线方式的偏离，这就是不完美，这就是一种挑刺。就是我没做到完美的事情，我们都不喜欢偏离我们所持基模的东西，记住了，我们的心是不喜欢内在和外在之间的脱节的，我们需要的是平衡是一致，我们不喜欢横生枝节，而如果我们心中抱有的是完美主义的基模，而批评又是对其的偏离，我们就会变得有自卫性，这是我多次有所感受的。并且也是我一直在努力解决的。附带一提，或者说正好相反，一个最求卓越的人是心胸开阔的。他会欢迎是不是的建议和批评，这不是说他或她喜欢这样，而是他或她明白这是必要的。这是成长和发展的必要部分，完美主义者只注意到空着的那半个杯子。为什么？因为完美主义者为失败所困扰，被对直线的完美方式的偏离所困扰。而不管是什么，困扰我们的就是我们说关注的，他或她一直关注未能完成的东西，关注潜在的可能失败或者真正的失败。追求卓越的人，则会关注已经满的那半个杯子。为什么？因为他或她既享受达成目标，又学会享受过程中的每一步，那就是旅途。即便是失败也能是机遇。
+**现在的问题是哪个才更现实？**拥有这样的基模[^2]是否现实（直线基模）？或者说这个（非直线型）才比较现实？我想这是很明显的。要达到成功可没有直线的捷径。要达成一段快乐的恋情也没有捷径。要发明电灯泡也没有捷径。学好心理学也没有。想成为好的父母和朋友也没有，我们会犯错。而且自然的规则我们必须遵守。**追求卓越就是要克服困难**，是啊，我也希望我能直线的从A到B。我希望我能做到，我希望我不必经历失败，我不喜欢不断地失败和打壁球输掉，我当然也不会喜欢和我的妻子意见不合，我甚至希望宁愿没有万有引力定律，然后我就可以到处飞或者到处飘。这是现实，而这就是幻想了。当我们的心中存在这个基模的时候，我们就让自己反抗自然规律，就如同我们不接受万有引力定律的话，我们的生活就会充满不可和沮丧，我们活着，那么多人也活着，哈佛有不少人，不只哈佛，所以地方都有，时常沮丧，因为在他们心里一直有这样的基模，再说一遍，这不是说我们该享受失败，但当我们有这样的基模的时候，同时又不享受失败，我们就会因为难以接受事实而沮丧，拥有这样的基模也会有后果的，我就想讨论一下这样的后果，怀有拥有这种基模的人的一些特征。根本就没有完美的完美主义者，就如我说的我们都存在一个闭区间内，确实有些人，确实有很多人更接近这个区间的这端，我想和你们分享这些特征，都是那些，都是那些记载在文学作品之内的，有很多人都拥有这样的特征，你们大多或多或少都拥有一些这样的特征，而不是别的特征，这也没关系。所以这些特征，除了都已被心理学著作，详述之外，我都有过体会，或现在仍有所体会，所以这些特征对我来说具有一定的意义。他们本身也非常常见。
 
-完美主义者会过度一般化夸大化问题，非黑即白，要么是完美的，要么是一无是处。我们等一下就能看到，这样的“全部或没有”的对立于现实的方法造成的后果。我们又谈到了明白现实是怎么样的，明白事物的过程是怎么样的。对于完美主义者来说，说没有自我接受的；对于最求卓越的人来说，能够接受现实中存在的各种弯路，而没有一步登天的捷径，能够接受个人的失败，能够接受自己视作一个整体予以接受。对于完美主义者来说，只有一种方式是合适的，并且是固定不变的，没有任何提升的空间，没有任何偏差，更没有问题和错误，只有一种方式，而不是动态的。更有弹性和自发性的过程和旅途，在行为中自我证实。完美主义者恐惧失败，恐惧来自于内心的自己将自己视为失败者的失败，也恐惧他人将自己视为失败者，就是为了维持那完美的幻觉。完美主义者恐惧失败，恐惧来自于内心的。自己将自己视为失败者地失败，也恐惧他人将自己视为失败者。就是为了维持那种完美的幻觉！而不是将失败视为反馈，不是说要享受失败！我还没遇到过享受失败的人！而是要将失败视为一种反馈和成长的机会。完美主义者只想着怎么到达这里，他们只关注这个，只针对目的！直来直去的，别的事情根本不重要！如果它不能让我达到目的的话，但对于追求卓越的人来说，旅途和终点都是成功的一部分。这样的基模上的差异，会导致很多的后果！
+**第一个是自卫性**。**在争论和讨论中，完美主义中都有自卫性**（确实如此）。为什么？因为批评在定义上就是一种对于我们的直线方式的偏离，这就是不完美，这就是一种挑刺。就是我没做到完美的事情，我们都不喜欢偏离我们所持基模的东西，记住了，我们的心是不喜欢内在和外在之间的脱节的，我们需要的是平衡是一致（大脑的一致性），我们不喜欢横生枝节，而如果我们心中抱有的是完美主义的基模，而批评又是对其的偏离，我们就会变得有自卫性，这是我多次有所感受的。并且也是我一直在努力解决的。附带一提，或者说正好相反，一个追求卓越的人是心胸开阔的。他会欢迎时不时的建议和批评，这**不是**说他或她喜欢这样，**而是**他或她明白这是必要的。这是成长和发展的必要部分。完美主义者只注意到空着的那半个杯子。为什么？因为完美主义者为失败所困扰，被对直线的完美方式的偏离所困扰。**而不管是什么，困扰我们的就是我们说关注的**，他或她一直关注未能完成的东西，关注潜在的可能失败或者真正的失败。追求卓越的人，则会关注已经满的那半个杯子。为什么？因为他或她既享受达成目标，又学会享受过程中的每一步，那就是旅途。即便是失败也能是机遇。
 
-我在这里列举一些。第一个就是完美主义者只能感受到，最多也只是，暂时性的轻松！是的！他们会感受到持续的压力，但当他们达到目的以后，他们感到了轻松！这就是典型的逐利者！
+**完美主义者会过度一般化夸大化问题，非黑即白，要么是完美的，要么是一无是处**。我们等一下就能看到，这样的“全部或没有”的对立于现实的方法造成的后果。我们又谈到了明白现实是怎么样的，明白事物的过程是怎么样的。对于完美主义者来说，是没有自我接受的；对于追求卓越的人来说，能够接受现实中存在的各种弯路，而没有一步登天的捷径，能够接受个人的失败，能够接受自己视作一个整体予以接受。对于完美主义者来说，只有一种方式是合适的，并且是固定不变的，没有任何提升的空间，没有任何偏差，更没有问题和错误，只有一种方式，而不是动态的，更有弹性和自发性的过程和旅途，在行为中自我证实。完美主义者恐惧失败，恐惧来自于内心的自己将自己视为失败者的失败，也恐惧他人将自己视为失败者，就是为了维持那完美的**幻觉**。完美主义者恐惧失败，恐惧来自于内心的。自己将自己视为失败者的失败，也恐惧他人将自己视为失败者。就是为了维持那种完美的幻觉！而不是将失败视为反馈。不是说要享受失败，我还没遇到过享受失败的人，**而是要将失败视为一种反馈和成长的机会**。完美主义者只想着怎么到达这里，他们只关注这个，**只针对目的！直来直去的，别的事情根本不重要**，如果它不能让我达到目的的话。但对于追求卓越的人来说，**旅途和终点都是成功的一部分**。这样的基模上的差异，会导致很多的后果！
 
-我来给你们讲一个这样逐利者的例子！一个人，我们姑且称他为X先生，去上学了，上学。在那之前，他一直很享受学前的生活！而他上学以后，就开始有压力了。因为他明白，他必须很努力地读书。并取得非常好的成绩来上一个好初中。因为他父母想让他进的那所初中，竞争很激烈非常不好进。他确实进了一间不错的小学。但是现在他要为初中而努力了，所以他有了压力，他并不享受小学生活。但他确实感受到轻松，在假期到来的时候，在全家去度假或者考试结束的时候，在他可以不用担心考试和朋友玩的时候，他经过了小学阶段，却不怎么喜欢。他感受到轻松，却丝毫没有感受到在他还在幼儿园的时候感受过的那种：对于学习的热情与喜爱。他后来进入了梦想中的初中。那所他一直想要进入的初中，他做到了，他只在前两周里感觉非常高兴。因为他要开始考虑，他梦想中的高中了。为什么？因为那所高中，是进入全国最好的那些大学的垫脚石。他也很想进入间全国最好的大学。所以他在初中又很努力地学习！他并不怎么享受这样努力的过程.但是他成功了，他进入了梦想中的高中，他很兴奋，从来没有这么高兴过！因为他已经是全国最出色的孩子中的一员。进这所高中不容易，但是他做到了。然后他又开始学习，他又只开心一周，压力又来了。因为这所高中里面竞争非常激烈。他必须加入两个运动队，还有三个学生组织，因为他必须充实他的简历好让自己进入梦想中的大学。他过的很挣扎，一点意思也没有。但是他对自己说：“这只是暂时的，痛苦是短暂的，等我进入了全国最优秀的大学就会有回报的”然后他付诸行动。在4月2号，一封信来了！信的信封很大，他打开信知道自己成功了。他又感到非常的兴奋，甚至比进入高中时还高兴，然后他说：‘现在，我终于能放手，好好的放松一下了。因为我已经进了这间大学，我的人生从此稳定下来了！’接下来他十分享受高中的最后一年，还有假期以及进入大学的第一周，他很兴奋，这位X先生。但是在第一周过去后，压力又出现了，因为很快就会到其中考试。而很快又会出现激烈的竞争。并且每个人都和他一样努力，因此他也必须非常的努力。因为他想得到他的梦想中的工作，他在大一暑假的时候得到了理想的实习机会，但是压力又继续出现了，他感受过轻松，也感受过愉快的时光。但是这些都是在考试结束以后。或者假期即将到来之前，或者是在假期期间。但是每次都一样，压力又出现了，他自己也不明白为什么他不开心。因为这一切都是他想要的，他非常想要这些，多于别的一切。他说：“好的，只要我得到这份工作就好了！为什么？因为那份工作能让我进入最好的商学院。这能让我在一千六百个一同毕业的人中脱颖而出！”所以他继续努力，继续充实他的简历！他是三个学生组织的成员，担任两个的部长！是两个大学运动预备队员，一个正式队员。还要加上每学期五门甚至六门课。为什么？因为这很困难，竞争很激烈。这就是适者生存，不付出就没有收获！大学最后一年到来了，他又有压力了。但是他得到了那份工作，他很高兴！这就是他想要的.这就是他所预想的。现在他很高兴，然后8月3号到了。是他正式开始工作的第一天，他上班去了。他周围的所有人都是最高等学府的。毕业生都是最优秀学校的学生。他觉得已经功成名就，却只高兴了两周，因为在两周以后，他又感受到了非常大的压力！比大学里的压力还要大。他没有时间再像大学里面一样在饭堂里悠闲地吃饭。他每周工作八十到九十小时，一点也不享受！但是他会做到的，他会做得很好的！他会得到一封很好的进商学院的推荐信。在从商学院毕业以后，找到一个真正的理想工作并享受生活！然后他真的进了最高的商学院，也找到了他最好的工作。工作上，作为一个员工，他很高兴！事实上他甚至不敢相信自己的好运！他赚钱赚的很多，那三年前看起来难以忍受的助学贷款，现在一下子就还清了。他感觉很棒，他有了一间很不错的公寓.他成了员工，他很兴奋。他很高兴，“我终于做到了！”但是过了几个月，压力又回来了.因为他只是一个员工。他非常非常想成为合伙人。但当他成为合伙人以后，当他获得了“终身任期”以后，他的生活就可以安顿下来了。他继续努力工作，奋力拼搏。他不怎么喜欢他的工作，只要再努力多一点，在忍耐多一点痛苦，然后就会有真正的回报了。在艰苦努力了五年以后，他有做到了，他成为了合伙人，事实上，也是那个公司历史上最年轻的合伙人.他很兴奋。他休了一个长假，然后回来工作。斗志满满，因为他现在是所有者。是这个著名的公司的所有者之一。现在他也已经成家了。他买下了市郊的一所大房子，非常贵。但他轻易买下了，他也买了一辆豪华车。他还有了一个司机，他感觉真的功成名就了。他感觉良好地过了3个月，压力又来了！因为他只是一个初级的合伙人，他能成为高级合伙人吗？这可能吗？好吧！只有努力工作才可能。因为没多少人能爬到金字塔那么高的位置！越来越难了，但是他会成功的。他挣扎着，忍受着，一点意思也没有。但是他成功了，没有付出就没有回报。这一次，他在Hamptons区买了一栋房子，用来度假和休息。还有一辆新车，更大也更快！然后他说：“我终于，终于能够放松了！”然后他开始放松自己，过了两个半月，压力又来了，因为他只是个高级合伙人，但是常务董事只有一个，想得到那个位置是非常困难的。但是他决心要当上常务董事。他一直是明星级人物，没理由止步不前，这对他来说没什么乐趣可言。他没有花多少时间和他爱的人在一起，而因为他心中的焦虑他必须证明自己。足足花了七年时间，在这七年里，他在物质上已经很富足了，只是愈发缺乏时间，他不断的奋斗，最后终于成功了！董事会发表了人名声明，他登上了华尔街日报的头版新闻。X先生成为了这件传奇公司的常务董事，他的朋友祝贺他，他感到万分自豪，他很快乐。但是随后焦虑回来了，有一天他走进办公室里，坐在椅子上，脚搭在桌子上。他已经成了老板，成了掌门人，他回头就可以看见[ce](#ceshi)中央公园，那景色实在是太美了。他真的是而不是修辞的说，他真的站在了世界之巅。然后有人敲门了，他被敲门声吓了一跳，因为一般来了人他的秘书会向他通报，访客不会就这么过来敲门。毕竟他是站在世界之巅的人。于是他走过去开了门。来人是董事会主席，他们俩互相打了个招呼。然后董事会主席说‘今年的盈利记录，非常棒，不可思议，您做的太好了！我们都为您而骄傲，感谢您的存在！但是，您应该退休了，您已经72岁了。’这就是逐利者的生活。
+我在这里列举一些。第一个就是完美主义者只能感受到，最多也只是，暂时性的轻松。是的，他们会感受到持续的压力，但当他们达到目的以后，他们感到了轻松！这就是典型的逐利者！
 
-最佳情况下，当然这只是大概的描述。我只是着重描述了几个特殊的阶段，这也不是要么全部，要么没有，但是，总的来说，这就是逐利者的生活。只关注从A点到达B点。然后轻松半个到一个月，然后...B点又变成了新的A点。然后就像一直不断向上爬的老鼠，你们必须现在就问自己，不！现在问那还要等多久？你们必须现在就问自己，“我到底想要什么样的生活？”我给的是一个生意场上的例子，其实对于其它领域也一样！不管你是想成为一个医生，是因为能否上到最好的学校而有压力？是想要最好的公寓？最好的实习机会？最想要的好的，最高的职位等等！或者你是打算为非盈利机构工作。无论你是留在学术界，还是成为律师，都一样，都是在不同领域重复X先生的故事。这样的情况适用于任何方面！问题就是“我们想要什么样的生活？”要记住其中最重要的，一个追求卓越的人，不会放弃自己的雄心！但是，一个追求卓越的人，也不会放弃整个旅途！我们很快也会讲到，追求卓越的人，不仅仅不会放弃整个旅途，或者结果，他们常常会获得更高的成就！我们很快就会讲到，追求卓越的人，并不只关注短时间的放松，还关注长久的满足，是的，生活中会有起起伏伏！但是，也能够享受旅途中的每一天！在大学里的经历，和朋友们美美的吃了一餐的经历，阅读名家的作品的经历，上有趣的课，参加有趣的课外活动的经历，并且重视这样的经历，而不是忽略它们。不是把这些看做普通的，为了成功的最终目的。  
-我们必须经历的事情，你或许会非常渴望成功，但是你所在的却是此时，此地，不是别处。你们也知道，我从来没有，或许你们有，我从来没有遇到过完美的人！我认为这样的人不存在，换句话说，如果根本就不存在完美的人！那么对每个人来说，失败都是不可避免的。为失败所困惑的完美主义者，只是专注于失败而追求卓越的人，则会发现路途上每一步都有成功的机会！甚至在失败中也有这样的机会。完美主义者常常讲时间浪费在必须读清楚每个字，“我要做到最好，拿满分！”要么全部要么没有，要么我交上去一份完美的论文，要么我就干脆不交论文，要么我就拿到A，要么我就一无是处。要么全部，要么没有，有时候这是合适的，有时候追求卓越的人也会持有这种态度！比如，如果你是一个医生，你想做一场完美的手术，你课不会说“好吧!没关系啊！我切对了八块应该切的东西”没错，在有些场合，你会需要完美主义，但是在我们生活中的其它方面，都不必要！甚至会伤害我们。
+我来给你们讲一个这样逐利者的例子。一个人，我们姑且称他为X先生，去上学了。上学，在那之前，他一直很享受学前的生活。而他上学以后，就开始有压力了。因为他明白，他必须很努力地读书。并取得非常好的成绩来上一个好初中。因为他父母想让他进的那所初中，竞争很激烈非常不好进。他确实进了一间不错的小学。但是现在他要为初中而努力了，所以他有了压力，他并不享受小学生活。但他确实感受到轻松，在假期到来的时候，在全家去度假或者考试结束的时候，在他可以不用担心考试和朋友玩的时候，他经过了小学阶段，却不怎么喜欢。他感受到轻松，却丝毫没有感受到在他还在幼儿园的时候感受过的那种对于学习的热情与喜爱。他后来进入了梦想中的初中。那所他一直想要进入的初中，他做到了，他只在前两周里感觉非常高兴。因为他要开始考虑，他梦想中的高中了。为什么？因为那所高中，是进入全国最好的那些大学的垫脚石。他也很想进入间全国最好的大学。所以他在初中又很努力地学习！他并不怎么享受这样努力的过程.但是他成功了，他进入了梦想中的高中，他很兴奋，从来没有这么高兴过！因为他已经是全国最出色的孩子中的一员。进这所高中不容易，但是他做到了。然后他又开始学习，他又只开心一周，压力又来了。因为这所高中里面竞争非常激烈。他必须加入两个运动队，还有三个学生组织，因为他必须充实他的简历好让自己进入梦想中的大学。他过的很挣扎，一点意思也没有。但是他对自己说：“这只是暂时的，痛苦是短暂的，等我进入了全国最优秀的大学就会有回报的”然后他付诸行动。在4月2号，一封信来了！信的信封很大，他打开信知道自己成功了。他又感到非常的兴奋，甚至比进入高中时还高兴，然后他说：‘现在，我终于能放手，好好的放松一下了。因为我已经进了这间大学，我的人生从此稳定下来了！’接下来他十分享受高中的最后一年，还有假期以及进入大学的第一周，他很兴奋，这位X先生。但是在第一周过去后，压力又出现了，因为很快就会到其中考试。而很快又会出现激烈的竞争。并且每个人都和他一样努力，因此他也必须非常的努力。因为他想得到他的梦想中的工作，他在大一暑假的时候得到了理想的实习机会，但是压力又继续出现了，他感受过轻松，也感受过愉快的时光。但是这些都是在考试结束以后。或者假期即将到来之前，或者是在假期期间。但是每次都一样，压力又出现了，他自己也不明白为什么他不开心。因为这一切都是他想要的，他非常想要这些，多于别的一切。他说：“好的，只要我得到这份工作就好了！为什么？因为那份工作能让我进入最好的商学院。这能让我在一千六百个一同毕业的人中脱颖而出！”所以他继续努力，继续充实他的简历！他是三个学生组织的成员，担任两个的部长！是两个大学运动预备队员，一个正式队员。还要加上每学期五门甚至六门课。为什么？因为这很困难，竞争很激烈。这就是适者生存，不付出就没有收获！大学最后一年到来了，他又有压力了。但是他得到了那份工作，他很高兴！这就是他想要的.这就是他所预想的。现在他很高兴，然后8月3号到了。是他正式开始工作的第一天，他上班去了。他周围的所有人都是最高等学府的。毕业生都是最优秀学校的学生。他觉得已经功成名就，却只高兴了两周，因为在两周以后，他又感受到了非常大的压力！比大学里的压力还要大。他没有时间再像大学里面一样在饭堂里悠闲地吃饭。他每周工作八十到九十小时，一点也不享受！但是他会做到的，他会做得很好的！他会得到一封很好的进商学院的推荐信。在从商学院毕业以后，找到一个真正的理想工作并享受生活！然后他真的进了最高的商学院，也找到了他最好的工作。工作上，作为一个员工，他很高兴！事实上他甚至不敢相信自己的好运！他赚钱赚的很多，那三年前看起来难以忍受的助学贷款，现在一下子就还清了。他感觉很棒，他有了一间很不错的公寓.他成了员工，他很兴奋。他很高兴，“我终于做到了！”但是过了几个月，压力又回来了.因为他只是一个员工。他非常非常想成为合伙人。但当他成为合伙人以后，当他获得了“终身任期”以后，他的生活就可以安顿下来了。他继续努力工作，奋力拼搏。他不怎么喜欢他的工作，只要再努力多一点，在忍耐多一点痛苦，然后就会有真正的回报了。在艰苦努力了五年以后，他有做到了，他成为了合伙人，事实上，也是那个公司历史上最年轻的合伙人.他很兴奋。他休了一个长假，然后回来工作。斗志满满，因为他现在是所有者。是这个著名的公司的所有者之一。现在他也已经成家了。他买下了市郊的一所大房子，非常贵。但他轻易买下了，他也买了一辆豪华车。他还有了一个司机，他感觉真的功成名就了。他感觉良好地过了3个月，压力又来了！因为他只是一个初级的合伙人，他能成为高级合伙人吗？这可能吗？好吧！只有努力工作才可能。因为没多少人能爬到金字塔那么高的位置！越来越难了，但是他会成功的。他挣扎着，忍受着，一点意思也没有。但是他成功了，没有付出就没有回报。这一次，他在Hamptons区买了一栋房子，用来度假和休息。还有一辆新车，更大也更快！然后他说：“我终于，终于能够放松了！”然后他开始放松自己，过了两个半月，压力又来了，因为他只是个高级合伙人，但是常务董事只有一个，想得到那个位置是非常困难的。但是他决心要当上常务董事。他一直是明星级人物，没理由止步不前，这对他来说没什么乐趣可言。他没有花多少时间和他爱的人在一起，而因为他心中的焦虑他必须证明自己。足足花了七年时间，在这七年里，他在物质上已经很富足了，只是愈发缺乏时间，他不断的奋斗，最后终于成功了！董事会发表了人名声明，他登上了华尔街日报的头版新闻。X先生成为了这件传奇公司的常务董事，他的朋友祝贺他，他感到万分自豪，他很快乐。但是随后焦虑回来了，有一天他走进办公室里，坐在椅子上，脚搭在桌子上。他已经成了老板，成了掌门人，他回头就可以看见[ce](#ceshi)中央公园，那景色实在是太美了。他真的是而不是修辞的说，他真的站在了世界之巅。然后有人敲门了，他被敲门声吓了一跳，因为一般来了人他的秘书会向他通报，访客不会就这么过来敲门。毕竟他是站在世界之巅的人。于是他走过去开了门。来人是董事会主席，他们俩互相打了个招呼。然后董事会主席说‘今年的盈利记录，非常棒，不可思议，您做的太好了！我们都为您而骄傲，感谢您的存在！但是，您应该退休了，您已经72岁了。’这就是逐利者的生活。
 
-完美主义者往往倾向混乱！我是指多方面的混乱。比如进食问题，我来给你们提供一个，个人的例子吧！在我还在打职业壁球的时候，我必须控制我的食谱，要吃的健康吃的好！但还是产生了问题。我的生活中有一项重大的挑战！这挑战就是我母亲是完美的大厨。她做的蛋糕尤其诱人.于是就有了这样的，我在长大的时候，常常遇到的状况，痛苦的童年！我在壁球训练过后回家，饿的要命的打开冰箱，然后那里面有一大块蛋糕。不是一整个，但差不多四分之一个。非常大的一块，实在是非常诱人！我根据以往的经验知道，这很好吃。我看着这块蛋糕，然后关上了冰箱门。因为我不能吃，当时我正在为一个重要的巡回赛训练。但是在三分钟以后，我回到冰箱那看蛋糕还在不在，为什么？你们中认识我兄弟的都明白，我兄弟的块头比我大多了，他对我母亲的厨艺的喜爱，一点不在我的之下。所以我去确定蛋糕还在那，确实还在。过了十分钟，我必须再去检查一遍，因为我兄弟在我视线内消失了几分钟。我以为他到冰箱那去了。所以我又打开了冰箱一次，蛋糕还在，然后我感到一阵轻松，大约五分钟以后，我又回到冰箱那里。我打开冰箱们，两分钟以后蛋糕就不见了。要么全部，要么没有，要么我不碰，要么我吃完。这就是完美主义者持有的基模。不会说“好吧！我就吃一块”要么不吃，要么吃完！所以这就是完美主义者的基模。我要么成为超级模特，要么超重。要么全部，要么没有，这是很有破坏力的，这会对我们产生各个层次的严重伤害！相对于健康的方式而言，好的，我就吃一小块。好的，我重了几磅，这算大事吗？我是人！我不是机器人，也不是芭比娃娃，更不是KEN，我说错话了！这很伤自尊，为什么？因为Nathaniel Branden写过很多关于自尊的文字，我们在未来三周内将会更多的讲到他。
+最佳情况下，当然这只是大概的描述。我只是着重描述了几个特殊的阶段，这也不是要么全部，要么没有，但是，总的来说，这就是逐利者的生活。只关注从A点到达B点。然后轻松半个到一个月，然后...B点又变成了新的A点。然后就像一直不断向上爬的老鼠，你们必须现在就问自己，不！现在问那还要等多久？你们必须现在就问自己，**“我到底想要什么样的生活？**”我给的是一个生意场上的例子，其实对于其它领域也一样！不管你是想成为一个医生，是因为能否上到最好的学校而有压力？是想要最好的公寓？最好的实习机会？最想要的好的，最高的职位等等！或者你是打算为非盈利机构工作。无论你是留在学术界，还是成为律师，都一样，都是在不同领域重复X先生的故事。这样的情况适用于任何方面！问题就是“我们想要什么样的生活？”要记住其中最重要的，一个追求卓越的人，不会放弃自己的雄心！但是，一个追求卓越的人，也不会放弃整个旅途！我们很快也会讲到，追求卓越的人，不仅仅不会放弃整个旅途，或者结果，他们常常会获得更高的成就！我们很快就会讲到，追求卓越的人，并不只关注短时间的放松，还关注长久的满足，是的，生活中会有起起伏伏！但是，也能够享受旅途中的每一天！在大学里的经历，和朋友们美美的吃了一餐的经历，阅读名家的作品的经历，上有趣的课，参加有趣的课外活动的经历，并且重视这样的经历，而不是忽略它们。不是把这些看做普通的，为了成功的最终目的。  
+我们必须经历的事情，你或许会非常渴望成功，但是你所在的却是此时，此地，不是别处。你们也知道，我从来没有，或许你们有，我从来没有遇到过完美的人！我认为这样的人不存在，换句话说，如果根本就不存在完美的人！那么对每个人来说，失败都是不可避免的。为失败所困惑的完美主义者，只是专注于失败。而追求卓越的人，则会发现路途上每一步都有成功的机会！甚至在失败中也有这样的机会。完美主义者常常讲时间浪费在必须读清楚每个字，“我要做到最好，拿满分！”要么全部要么没有，要么我交上去一份完美的论文，要么我就干脆不交论文，要么我就拿到A，要么我就一无是处。要么全部，要么没有，有时候这是合适的，有时候追求卓越的人也会持有这种态度！比如，如果你是一个医生，你想做一场完美的手术，你课不会说“好吧!没关系啊！我切对了八块应该切的东西”没错，在有些场合，你会需要完美主义，但是在我们生活中的其它方面，都不必要！甚至会伤害我们。
 
-自尊的第一个基础就是自我接受！要记得完美主义者是不接受自我的！第二个伤害自尊的原因是，完美主义者总会遇到长期且不可避免的失败！因为根本就没有完美的人。而如果我一直失败或者视自己为失败者，那我还会有较高的自尊心吗？当然不会！另一个完美主义者容易自尊心受伤的原因，是他们更不愿意去尝试。而如果我不愿意尝试的话，其后果就是，更加低的自尊心。还记得自我知觉理论吗？相对的事持续的自我提升！不是一条直线直上去的，而是旋转向上的！完美主义伤害人际关系!
+**完美主义者往往倾向混乱**！我是指多方面的混乱。比如进食问题，我来给你们提供一个个人的例子吧。在我还在打职业壁球的时候，我必须控制我的食谱，要吃的健康吃的好！但还是产生了问题。我的生活中有一项重大的挑战！这挑战就是我母亲是完美的大厨。她做的蛋糕尤其诱人.于是就有了这样的，我在长大的时候，常常遇到的状况，痛苦的童年！我在壁球训练过后回家，饿的要命的打开冰箱，然后那里面有一大块蛋糕。不是一整个，但差不多四分之一个。非常大的一块，实在是非常诱人！我根据以往的经验知道，这很好吃。我看着这块蛋糕，然后关上了冰箱门。因为我不能吃，当时我正在为一个重要的巡回赛训练。但是在三分钟以后，我回到冰箱那看蛋糕还在不在，为什么？你们中认识我兄弟的都明白，我兄弟的块头比我大多了，他对我母亲的厨艺的喜爱，一点不在我的之下。所以我去确定蛋糕还在那，确实还在。过了十分钟，我必须再去检查一遍，因为我兄弟在我视线内消失了几分钟。我以为他到冰箱那去了。所以我又打开了冰箱一次，蛋糕还在，然后我感到一阵轻松，大约五分钟以后，我又回到冰箱那里。我打开冰箱们，两分钟以后蛋糕就不见了。要么全部，要么没有，要么我不碰，要么我吃完。这就是完美主义者持有的基模。不会说“好吧！我就吃一块”要么不吃，要么吃完！所以这就是完美主义者的基模。我要么成为超级模特，要么超重。要么全部，要么没有，这是很有破坏力的，这会对我们产生各个层次的严重伤害！相对于健康的方式而言，好的，我就吃一小块。好的，我重了几磅，这算大事吗？我是人！我不是机器人，也不是芭比娃娃，更不是KEN，我说错话了！这很伤自尊，为什么？因为Nathaniel Branden写过很多关于自尊的文字，我们在未来三周内将会更多的讲到他。
+
+**自尊的第一个基础就是自我接受**！[^3]  要记得完美主义者是不接受自我的！第**二**个伤害自尊的原因是，完美主义者总会遇到**长期且不可避免的失败**！因为根本就没有完美的人。而如果我一直失败或者视自己为失败者，那我还会有较高的自尊心吗？当然不会！**另一个**完美主义者容易自尊心受伤的原因，是他们**更不愿意去尝试**。而如果我不愿意尝试的话，其后果就是，更加低的自尊心。还记得自我知觉理论吗？相对的事持续的自我提升！不是一条直线直上去的，而是旋转向上的！
+
+
+
+完美主义伤害人际关系!
 
 回想过去，我从这个角度来说，我很难捉摸，我基于完美主义，在人际关系中所犯的错误的类型，为什么？第一，自卫性！如果我一直是处于自卫性的位置，如果我不能接受或者处理批评，那我就很难和别人形成亲密的关系。这样的情况喜爱怎么可能建立亲密关系呢？
 
---------------------------------------------------------超滤整理--------------------------------------------
+
 
 另一个完美主义伤害人际关系的原因是，我们经常，我们对世界的看法和对自己的看法一样，如果我是完美主义者那我期望的就是完美。对我来说是一条直线，对他人亦是如此。不论是对于我的伴侣还是对我的孩子和朋友。现在我们……我以前也说过了，没有完美的人。我们第一次见面的时候可能感觉是完美的，在度蜜月的时候也是完美的。他或她是完美的。但是突然，我们开始发现对方的缺点了，那不是我一开始以为可以在一起的那人。当然，如果我期待的是芭比娃娃或KEN的话，完美的。但是对方可是人。如果我从对方身上期待的是完美的，我肯定会失望的。这也会引起沮丧，对自己的伴侣不认可，也常常会伤害到人与人之间的关系。相对于持续成长的关系来说。这是我们会在谈论人际关系的时候谈论到的理想的人际关系，不是一个没有失败，没有不和的关系。理想的人际关系在包含众多积极因素同时也会包含不和，失望和争吵。那才是健康的人际关系。这让人际关系随时间变得更加稳固。
 
@@ -41,17 +47,17 @@
 
 我们会谈到另一个作家。他对于我们如何克服这种完美主义有非常好的建议，他叫Samuel Coleridge。80/20规则。这条规则。了解这条规则并将其应用在时间管理上改变了我在哈佛的学习经历。那帕累托法则是什么呢？帕累托是100年前的意大利经济学家。他得出了这样的法则，并将其命名为帕累托法则。这法则表示，在大多数社会中，百分之二十的人拥有百分之八十的财富。他们也将这条法则应用于商业组织，那就是你百分之二十的客户给你带来了百分之八十的收入。这也被用于经济学的许多领域。而到最近被用于时间管理方面。比如说，在我们百分之二十的时间里，我们可以完成百分之八十的工作。而当我明白这一点的时候，它改变了我对学术的态度。为什么？因为我意识到我不必将那些材料完全读完。再说一遍，这点别学我。我交论文前不必确认每一个t都写好了也不必确认每一个i上面都点了点。我开始遵循更多的愉悦原则，或者说快乐原则，于是我说“好的，这才是我感兴趣的东西”。比如说，我不知道这门课还有没有文学与艺术学院课程C14“英雄”。还能报名吗？这是我本科时候最喜欢的课程。而且这课程还不算太难。我完全可以不怎么努力也得到好成绩。但是我在这科的期末论文上花了50个小时。因为我写的主题是我非常关心的。但是我没有得A，对我来说毫无道理。但我仍然在上面下了大工夫。因为这实在是太有意思了，至于其它课程，我只投入了能让我得到足够成绩的时间。不是要么全部要么没有。不会说要么我就得A，要么我就不学习。另一门课，我不知道这门课还有没有，还是文学与艺术，Maria Tatar教的“神话故事”她现在上别的课了。我本科时看见她第一眼就爱上了她。我真不敢相信我就这么说出来了。那么，她拒绝了。其实我没有问她。也是在那门课上，不算太难的课。在许多层次上来说非常享受的课。又一次，我花了许多时间在这篇最终成为一篇以自尊为主题的专题论文之上。所以再一次问自己到底什么才是最重要的？除了要么没有要么全部外，我还在乎什么。我的成绩确实下降了一点点。但是只是很少一点点。因为我在应用这条20/80法则。将百分之二十的注意力放到重要的东西上然后把百分之八十的工作做好。而我在学术的其它领域却获得了更多的成功，因为我有了更多的时间来打壁球来享受壁球练习。我有了更多时间来和别人交流，有时间去坐在法学院里吃一次五点开始的，持续两个半小时的晚餐。就是这样的基础上实现的。另一个对于80/20的应用：我们每人在一天中都有不同的最有工作效率的时间。实际上，在一天中百分之二十的时间内，我们完成了百分之八十的工作，这取决于我们是早起的鸟还是夜猫子。有的人早上6点或7点就起来了，然后他们立刻就可以工作了。我也闪这样的，我很早起床。对我很简单。我可以直接开电脑工作或去给孩子换尿布。很早的早上直接去工作没问题。但是到了晚上9点到10点就完全不行了。有人却是截然相反的他们可以熬夜到凌晨2点3点4点，那才是他们最有干劲的时候。这和我们内在的生物节奏有关，和我们的生理节奏有关。因为有人基本上没有人的周期是正好24小时的，大多数人都是23到25小时之间。对于周期是23小时的人来说，他们到了晚上就会非常疲劳。但是他们早上却会精神抖擞地起来。那些周期是25小时的人早上需要多睡一会。就是因为那些人我才将这课调到11点半。我知道是很早但是感谢你们的到来。我上大学的时候，大多数人都学到很晚。我的室友就学到很晚，从晚上10点开始然后学到12点甚至凌晨2点。这才是他们最有效率的时候。可我不是。我宁愿早上早点起来，我在晚上会很累，根本无法集中精神。我听说了这样的效率时段后，我改变了作息。我早早睡觉。在我的室友开始学习的时候，我上床睡觉，然后在我的室友还在睡觉的时候起床，然后在早上早早地把工作完成，做完以后去上11点的课。在早上的那3个小时内，我完成了更多东西更有效率更有创造性，比我在晚上熬夜有效率得多了。我刚才说到的那两样东西真的改变了我在这里的经历——在更短的时间内学到更多。不是完美主义的方式，是追求卓越的方式。
 
-大家都了解过“流动”了，Mihaly Csikszentmihalyi谈论过流动是我们最良好的感受，最出色的表现，也就是“没有付出就没有收获”。我们什么时候感受到流动？我们焦虑的时候感受不到，就如完美主义者那样，我们无聊时感受不到，只有我们乐观愉快，兴奋的时候感受得到。追求卓越的人更容易感觉到流动，而那些一直畏惧失败的人，一直为失败所困扰的人，一直在设想如果我失败了怎么办的人。我来谈谈完美主义的根源吧。因为一旦我们明白，就如我上次说的，一旦我们明白它是怎么来的，我们就更能克服它——完美主义的根源。
+大家都了解过“流动”了，Mihaly Csikszentmihalyi谈论过流动是我们最良好的感受，最出色的表现，也就是“没有付出就没有收获”。我们什么时候感受到流动？我们焦虑的时候感受不到，就如完美主义者那样，我们无聊时感受不到，只有我们乐观愉快，兴奋的时候感受得到。追求卓越的人更容易感觉到流动，而那些一直畏惧失败的人，一直为失败所困扰的人，一直在设想如果我失败了怎么办的人。我来谈谈完美主义的根源吧。**因为一旦我们明白，就如我上次说的，一旦我们明白它是怎么来的，我们就更能克服它——完美主义的根源。**
 
-第一个，最重要的因素就是社会影响。我们都不是天生的完美主义者。你们在录影带中看到的孩子，他们天生比我们更能享受学习的过程。我们畏惧失败，他们却不断跌掉了又爬起。所以是社会的影响导致了我们对于失败的畏惧，确切地说，是这样一种在我们心中烙下的并且几乎从出生开始就不断被加深的基模，那就是，成果才是真正重要的。当我们得到了某个成果的时候比如学会走路，做得好。在我第一年期末的时候得了A。真不错。只有我们的成果受到了奖励。过了没多久，我们就开始内化这种基模并且我们也开始相信我们接受它。当我们达成了某种成就的时候，这样的事在我们生活中一直延续着。我们什么时候会得到奖金？在4月3号吗？当然不是。是在12月31号。或者说是圣诞节之前，年末。今年大家都干得不错。很好。我们什么时候会得到分数，还被别人轻拍后背表示做得不错？是在学期末，或是在考试后，我们完成了某些事的时候。不会再旅途中得到。换句话说，整个旅途都没有受到奖励。于是我们也就开始认为它是无关，是不重要得，只是到达终点的一种方式。只有非常少的教师，家长，组织，还有学校会奖励旅途，奖励旅途中的愉快。当然，也有很少的人会奖励失败，可这是旅途中不可避免的。所以我们觉得这不好，这一点也不好，我们必须尽可能地追求直线。一种直接的基模。我们内化它的时候也付出了代价。这就是我们出生所在的社会环境，我们成长所在的社会环境，而这样的社会环境很难以改变。我也知道我家里也有孩子。这太难以改变了，因为我自己也时常对孩子说并且专注于“Shirell学会走路了，做得好。你学会走路了”，而不是奖励其中所付出的努力，我们等会会讲到。
+第一个，最重要的因素就是**社会影响**。我们都不是天生的完美主义者。你们在录影带中看到的孩子，他们天生比我们更能享受学习的过程。我们畏惧失败，他们却不断跌掉了又爬起。所以是社会的影响导致了我们对于失败的畏惧，确切地说，是这样一种在我们心中烙下的并且几乎从出生开始就不断被加深的基模，那就是，成果才是真正重要的。当我们得到了某个成果的时候比如学会走路，做得好。在我第一年期末的时候得了A。真不错。只有我们的成果受到了奖励。过了没多久，我们就开始内化这种基模并且我们也开始相信我们接受它。当我们达成了某种成就的时候，这样的事在我们生活中一直延续着。我们什么时候会得到奖金？在4月3号吗？当然不是。是在12月31号。或者说是圣诞节之前，年末。今年大家都干得不错。很好。我们什么时候会得到分数，还被别人轻拍后背表示做得不错？是在学期末，或是在考试后，我们完成了某些事的时候。不会再旅途中得到。换句话说，整个旅途都没有受到奖励。于是我们也就开始认为它是无关，是不重要得，只是到达终点的一种方式。只有非常少的教师，家长，组织，还有学校会奖励旅途，奖励旅途中的愉快。当然，也有很少的人会奖励失败，可这是旅途中不可避免的。所以我们觉得这不好，这一点也不好，我们必须尽可能地追求直线。一种直接的基模。我们内化它的时候也付出了代价。这就是我们出生所在的社会环境，我们成长所在的社会环境，而这样的社会环境很难以改变。我也知道我家里也有孩子。这太难以改变了，因为我自己也时常对孩子说并且专注于“Shirell学会走路了，做得好。你学会走路了”，而不是奖励其中所付出的努力，我们等会会讲到。
 
 奖励付出的努力，甚至奖励失败应对与整个过程非常难。这当然也和准许为人有联系，准许看到人类本性的限制，而不是理想化，孤立地，分离地看待生活。因为这不可能。如果不是准许为人，而是要求完美的话压力是持久存在的。存在于媒体中。存在于工作中。存在于教育机构中。这无处不在。我们也为之付出了代价。
 
----------------------------------------------以上滅失整理--------------------------------------------------------------
+
 
 现在我来给你们看几个例子。在那前先给你们介绍一下。你们都知道，学术研究赚不了多少钱。进入学术圈的人，大多都不是为了钱。有很多学者，我也不例外，必须额外赚取收入。我也有额外的收入，而我希望和你们分享一下我额外做的事。我的眼镜掩饰了我有腹肌的事实。那么，他是真实的？这间房间里有谁是长这样的？我也没指望你们来回答。但我的意思是，他是真实的？部分真实的。这照片修过不少地方。但是没错，确实有人长是这样的。但是我们再杂志会看到什么？我是说，如果你们进一家杂志店里去。你们也知道这种杂志的，这些就是封面上的人物。十分完美，完美的存在，甚至更加。我们的KEN还有芭比娃娃都更加完美，我在谷歌图片上找了很久，来看看吧。“科学的进步”“近代艺术的范例”，就像今天的Cosmo杂志一样，不是么，看这个：“性爱女神的秘密”我是说，这甚至不是“性爱人类的秘密”那还不够好，看看我们为自己定下的这些标准吧。我怎么才能变成那样，这里，我没看到，“百分之三十的。。”我应该好好读读，但这不是我想指的，其实我想指这个“如何快速进步”，要多快有多快，对吧，时间不多，永远不长痘痘，“我都37岁了，还有痘痘”他们怎么做到的，又是不现实的模型，1997年我还在新加坡住的时候，我还想带Nathaniel Branden去新加坡，他被认为是自尊研究的领头人，他的妻子Devers Branden也在自尊与自我成长方面花了很多功夫，所以我新闻能让他们来新加坡，所以我请他们来为我工作的公司做咨询，我在寻找其他途径，因为其他途径所要筹集的经费比较多。而我的一个好朋友，PAT LEE那时在位美体小铺工作，她说“这是在是太好了”，因为美体小铺还有Anita，Roddick,我之前提过她，对于女性自尊也很感兴趣，那为什么我们不能让Ddvers和Nathaniel还有美体小铺联合起来在新加坡搞一次关于女性自尊的活动呢？我认为这主意非常不错，我和Anita Roddick见了面，然后我们共同赞助了Nathaniel Branden，这次活动非常成功，本来有700个座位，可来了1000多人，我们得在场外放置等离子大屏幕，这次活动对很多人产生了激励，并激发了一场运动，在新加坡女性自尊的活动，作为结果，Nathaniel Branden写了本书叫：女性的自尊，因为她被我们在研讨会上所讲述的那些故事给深深吸引了。不管怎么说，Anita Rdddick在女性和自尊方面做了不少工作，其中一个项目，她在1997年策划的，叫做Ruby的洋娃娃，用来取代芭比娃娃，那次活动是这样的：“有三十亿女人长得不像超级模特只有8个才想”或者媒体们，在我们家乡，文化与生理的多样才是标准，那里就是地球。这次活动非常成功，也很重要。因为我们今天文化中的模型就是这样的，要么全部要么没有，这些照片是一同被找到的，我没有把他们特意放在一起，要么你大吃大喝，要么就是不吃不喝，我们从电影中得到了什么，谁能达到《壮志凌云》里面的标准，汤姆克鲁斯和凯利麦吉利斯，他们拥有的那种完美的爱情，但这是我们所有的模型，等我们谈到恋爱关系的时候会讲到，谁又能度过《爱你九周半》那样的九周半呢？更不要说过一辈子了，那电影里的激情，都是不可能的标准，还有那些自助的书，比如《思考致富》和这个没什么关系，只要思考，就能致富，这本书卖了几百万本，这里还有一本书，这本书不错，但我没有读过，但先看看《小步迈向幸福》，我们又迫不及待了，说的是专注于目标，而不是专注于努力、旅途、人格，还有所需的改变。
 
-还有别的导致完美主义的因素，这是一个你们已经读到过的研究结果，这是由Carol Dweck晚餐的出色研究，她现在在斯坦福大学工作，她所描述的不是所有的赞美都是好的，对于一个孩子说，你很棒，你狠出色，不乏赞美之词。你太聪明了，我的小爱因斯坦，这也不总是好的,长期来看着可能也是有害的，这也会导致完美主义的基模。
+还有别的导致完美主义的因素，这是一个你们已经读到过的研究结果，这是由Carol Dweck晚餐的出色研究，她现在在斯坦福大学工作，她所描述的不是所有的赞美都是好的，对于一个孩子说，你很棒，你很出色，不乏赞美之词。你太聪明了，我的小爱因斯坦，这也不总是好的,长期来看着可能也是有害的，这也会导致完美主义的基模。
 
 那么我和你们分享一下她的研究成果吧，我想你们已经读过了，她所做的就是找到一些十岁的孩子，然后把他们随机分成两组，第一组孩子都做了道题，到最后，对每一个完成的孩子说：“你真聪明伶俐”当然，孩子们都感觉不错，第二组做的是同一道题目，做完了，做的不错，到最后，她说：“你真努力，你很认真”这随机分成的两组孩子，一组是“聪明伶俐”，一组是“努力认真”。
 
@@ -59,7 +65,7 @@
 
 第三部分，这次她让孩子们做一道非常难题目，这题基本上是无法解答的，她想看看这两组孩子的反应，被告知聪明伶俐的那组他们没有坚持多久，并且非常沮丧，并且很快就开始放弃了。与此相反，被告知努力认真的孩子他们更能坚持并且享受解题的过程，虽然到最后他们都没能解开这道题，但是他们享受了这个过程，并且更加努力。看看这微小的操作带来的结果。简简单单的一个句子：“你真聪明”“你真努力”一句话带来了这么明显的不同，用她的话来说，“重视努力让孩子拥有一个他自己能掌控的变量”这能让他们认为自己能掌控自己的成功，强迫自然的天赋，让孩子们无法掌控成功，这不会给孩子们提供面对失败的方法，事实上当你仅仅注重于天赋的时候，你就是在制造完美主义的基模，而不是专注于旅途当中，努力的基模，她继续说道，“如果你称赞孩子的智力，当他们失败时，他们会认为自己不再聪明”然后失去对于眼前工作的兴趣，相反，那些被称赞为努力孩子，在困难面前不会气馁，甚至更有动力。这两种方式造成了多么明显的不同。被称赞智力的人会产生这样的基模，要么我很聪明，要么我就不聪明，我很畏惧不聪明，所以我就选择容易一点的任务吧，当我无法做到的时候，这就是攻击，是对于我的基模的侮辱，没错吧？这是对于直线的偏离。
 
-相对的，如果努力才是最重要的，“好吧，让我试试吧”，“我学到很多，这真有意思”；因为一个是“既定思维模式”如Dweck所说，而另一个是种可拓展的，时刻改变和发展的思维模式；一个是畏惧失败，因为我想聪明，被人称赞聪明很有意思，我不想威胁到这个基模，相对的是：努力的、重视过程的，当追求卓越的基模，成为惯常的做法。
+**相对的，如果努力才是最重要的**，“好吧，让我试试吧”，“我学到很多，这真有意思”；因为一个是“既定思维模式”如Dweck所说，而另一个是种可拓展的，时刻改变和发展的思维模式；一个是畏惧失败，因为我想聪明，被人称赞聪明很有意思，我不想威胁到这个基模，相对的是：**努力的、重视过程的，当追求卓越的基模，成为惯常的做法。**
 
 那么我们如何克服完美主义呢？如果我们确实有这个问题怎么办？要记住，根本就没有完美的完美的主义者，也没有完美的追求卓越者，你们必须选择你能快乐的生活方式，不会有现成的答案摆在你面前，对你而言可能只是有趣的学术理论，或者是非常个人化的原因。
 
@@ -69,9 +75,10 @@
 
 不管是要应对上瘾问题，还是对于生活中别的问题，完美主义还是要改善什么，第一步就是要有意识，第二步是专注于努力的嘉奖，Carol Dweck向我们展示的就是当我们专注于努力的时候，我们就能够改变那种根深蒂固的基模，即便这种基模已经存在了多年，所以对于我们自己，或者对别人，我们应专注于旅途。专注，并不一定是嘉奖自己成功，甚至是嘉奖自己的失败自己的尝试，在几个小时内，如Carol Dweck所见，告诉人们他们的心是可以扩展的，告诉他们神经可塑性，并非已经定型，我们仍可以做出改变，积极的接受。我认为Karen Horney她是幸福学创始人之一，她在恐惧症领域做了很多工作，她研究所得的其中一点是恐惧症，它从来不会消失，它是我们的一部分，它会变得更加可控制，但是总是存在，而极度的完美主义也是一种恐惧症，所以关键就是接受它。我总会有完美主义倾向，但是这没关系，但是在以前，我有着极度的完美主义，现在我更加接近追求卓越的极致，这是持续一生的，是不断进行的一个过程，这个在的关键就是接受，它一直都是我们生活的一部分这一个事实，然后问：“好的，那我该怎么办？”，换句话说就是采取行动，所以举例来说，就是怎么应对，把自己置于线上，我最初所做的，在我留意到我的完美主义与自卫性的时候，我会撇开我的做法并且请求批评，我会问别人“给我点反馈吧”，当我收到反馈的时候，和我的直线有所偏离的时候，我就阻止自己回击。你们也知道，对于完美主义者来说，最好的防守就是进攻，慢慢地我就习惯了，我没那么有自卫性了，我得以创造更高层次的亲密关系了，或者我开始尝试别的领域，那里我可能会遭到否定，让我以一个故事结尾吧。
 
-她的名字叫Brittaney，她是一位{#ceshi}展示女郎，我们在大学第一周时认识，我对她一见钟情，我们几乎整个第一周都在一起，到那一周的周末，为了克服我的完美主义，我约她出来，她拒绝了，这让我很吃惊，很受伤，但是她确实拒绝了,在大学第二年，我们又见面了，我再次约她出来，她又拒绝了。第三年，在年末的时候，我和另一个人约会去了，所以Brittaney就出局了。后来在我大四的时候我们又见面了，我们谈了些有趣的话题，那时候我已经开始学习心理学了，我也可以读懂她的身体语言，她经常这么弄她的头发，然后我知道她确实很喜欢我，然后我约她出来，她拒绝了，然后我就还留在这里和你们在一起，这就是个很重要的学习过程，学会失败，或败于学习。我们下周见！
+她的名字叫Brittaney，她是一位展示女郎，我们在大学第一周时认识，我对她一见钟情，我们几乎整个第一周都在一起，到那一周的周末，为了克服我的完美主义，我约她出来，她拒绝了，这让我很吃惊，很受伤，但是她确实拒绝了,在大学第二年，我们又见面了，我再次约她出来，她又拒绝了。第三年，在年末的时候，我和另一个人约会去了，所以Brittaney就出局了。后来在我大四的时候我们又见面了，我们谈了些有趣的话题，那时候我已经开始学习心理学了，我也可以读懂她的身体语言，她经常这么弄她的头发，然后我知道她确实很喜欢我，然后我约她出来，她拒绝了，然后我就还留在这里和你们在一起，这就是个很重要的学习过程，学会失败，或败于学习。我们下周见！
 
 
 
 [^完美主义]: 这个很有价值
-
+[^2]: 基模（schema）是认知心理学的一个重要概念，是知识表征（knowledge representation）的一种。所谓基模，指的是人的认知行为的基本模式，或者叫心智结构、认知结构或者认知导引结构。
+[^3]: 简而言之，自尊是对自我价值的评判，通过个人对于自我的态度表现出来
