幸福，通往幸福路上最大的障碍，就是人们把幸福和偷懒联系在一

--- a/10.md
+++ b/10.md
@@ -2,17 +2,25 @@
 
 早上好！今天要讲的是**变化**。今天很多事都会发生变化，我们之间的关系会发生变化，敬请关注啊！
 
-上节课结束的时候，我们谈到很多种不同的变化。第一种方式是`渐进式的`，好像滴水穿石，要花时间的、一点一点的、慢慢的；`第二种方式是突发式的`，好像用大锤开山劈石，凿出一条路，一个隧道。对于这两种变化，或是所有形式的变化，必须要注意的是：我们讲的重点是**要将变化持续下去**，而不是突然一变之后又恢复原状。因此要注意的是，变化并不是药到病除的灵丹妙药——即便当我们举起大锤，就是这举起来的动作，也需要我们在之前做很多准备的功夫。因此，举例来说，渐进式的变化，就好像每天都做感恩练习，慢慢成为一个更容易找寻美好的人，逐渐的看到更多积极的事物，一点一点的构建起新的神经通路。
+上节课结束的时候，我们谈到**很多种不同的变化**。
 
-还记得我们之前说过的两个重要概念，神经塑性和新生神经元吗？因为通过了解和理解我们大脑的变化，我们自身也将更容易产生变化。Carol Dweck做过相关研究（我们之后谈到完美主义的时候还会提到她）。另外大锤的例子和探索经验是一回事——真知灼见不是凭空产生的，而是经过长时间准备后千锤百炼而得来的。大家都知道所谓的灵感来自于99%的汗水，所以说没有灵丹妙药，而且正是那种对灵丹妙药的笃信和渴求导致了今天抑郁症如此高发频发。因为大家都很郁闷，很失望，发现灵丹妙药不管用的时候，就觉得是自己出了问题。我在书里也写了很可能他们认为“如果做完这五件事，我的人生就会美满了”。结果五件事做完，我却没有变得更快乐，于是我就开始怀疑自己。其实没有灵丹妙药。任何事都需要时间。没有所谓什么“幸福生活五步走”。
+**第一种**方式是`渐进式的`，好像滴水穿石，要花时间的、一点一点的、慢慢的；
 
-在我们讲变化过程之前，我们先要厘清一些概念。首先我们要问的是：**我，或者你，真的想要改变吗？**这不是一个无关紧要的问题，也不是象征性地问自己一下，因为表面上我们可能会说当然了，但是潜意识里却有东西在阻挠我们。
+**第二种**方式是突发式的，好像用大锤开山劈石，凿出一条路，一个隧道。
 
-我给大家举个例子吧。早在80年代的时候，Langer和Thompson曾做过一个实验。这个实验是这样的：他们找来一些学生或参与实验的人，然后问这些人他们想不想要摆脱自己性格的某个方面，比如说古板、或者容易轻信别人、或是冷酷。他们问这些人想不想要摆脱这些性格，想不想在这方面变的更好，是不是真的能改变自己。也就是说，如果改变对于你来说真的很重要，那你能不能最终变得不那么古板、不那么容易轻信别人、不那么冷酷。这就是他们最初问的两个问题——想不想改善？想不想改变？然后，在他们问了这些问题之后，实验还有第二个阶段。在这个阶段，他们让这些人去评估，评估下列正面性格，比如：言行一致对于你来说是否重要；值得信赖是不是重要；以及被认为是一个严肃认真的人对于你来说有多重要。下面我们来说这个实验的有趣的结果：所有**给这些正面性格打高分的人（这些黄色的是正面性格）认为这些性格很重要的人，反而比较不容易去改变自己的负面性格。**大家明白这其中的奥妙么？我想要摆脱古板的个性，我不喜欢自己那么古板，与此同时，言行一致在我看来是非常重要的品格。但是我反而不容易去改变自己的古板。因为在我的意识里，它们是相互关联的。对，我不想要古板下去了，同时我潜意识里有个小人却在说：我想要言行一致，别摆脱古板。因为我把两者结合起来了，我把两者联系在一起了，因此不想舍其一；因为我不想把婴儿和洗澡水一起倒掉，对于我来说两者是紧密相连的。同理，还有轻信和值得信赖。这两种品质可以说，**值得信赖的人，另一方面很容易轻信别人。**这种性格极端化以后，人会变得容易轻信别人，然而我却不想丢掉轻信别人的习惯，因为同时我不想丢掉我值得信赖的优点。同样的例子还有冷酷。**我的冷酷可能在潜意识里正反映出我的严肃认真**。
+对于这两种变化，或是所有形式的变化，必须要注意的是：我们讲的重点是**要将变化持续下去**，而不是突然一变之后又恢复原状。因此要注意的是，变化并不是药到病除的灵丹妙药——即便当我们举起大锤，就是这举起来的动作，也需要我们在之前做很多准备的功夫。因此，举例来说，渐进式的变化，就好像每天都做感恩练习，慢慢成为一个更容易找寻美好的人，逐渐的看到更多积极的事物，**一点一点的构建起新的神经通路**(这是变化的本质)。
+
+还记得我们之前说过的两个重要概念，**神经塑性**和**新生神经元**吗？因为通过了解和理解我们大脑的变化，我们自身也将更容易产生变化。Carol Dweck做过相关研究（我们之后谈到完美主义的时候还会提到她）。另外大锤的例子和探索经验是一回事——真知灼见不是凭空产生的，而是经过长时间准备后千锤百炼而得来的。大家都知道所谓的灵感来自于99%的汗水，所以说没有灵丹妙药，而且正是那种对灵丹妙药的笃信和渴求导致了今天抑郁症如此高发频发。因为大家都很郁闷，很失望，发现灵丹妙药不管用的时候，就觉得是自己出了问题。我在书里也写了很可能他们认为“如果做完这五件事，我的人生就会美满了”。结果五件事做完，我却没有变得更快乐，于是我就开始怀疑自己。其实没有灵丹妙药。任何事都需要时间。没有所谓什么“幸福生活五步走”。
+
+在我们讲变化过程之前，我们先要厘清一些概念。
+
+1. **首先**我们要问的是：**我，或者你，真的想要改变吗？**这不是一个无关紧要的问题，也不是象征性地问自己一下，因为表面上我们可能会说当然了，但是潜意识里却有东西在阻挠我们。
+
+我给大家举个例子吧。早在80年代的时候，Langer和Thompson曾做过一个实验。这个实验是这样的：他们找来一些学生或参与实验的人，然后问这些人他们想不想要摆脱自己性格的某个方面，比如说古板、或者容易轻信别人、或是冷酷。他们问这些人想不想要摆脱这些性格，想不想在这方面变的更好，是不是真的能改变自己。也就是说，如果改变对于你来说真的很重要，那你能不能最终变得不那么古板、不那么容易轻信别人、不那么冷酷。这就是他们最初问的两个问题——想不想改善？想不想改变？然后，在他们问了这些问题之后，实验还有第二个阶段。在这个阶段，他们让这些人去评估，评估下列正面性格，比如：言行一致对于你来说是否重要；值得信赖是不是重要；以及被认为是一个严肃认真的人对于你来说有多重要。下面我们来说这个实验的有趣的结果：所有**给这些正面性格打高分的人（这些黄色的是正面性格）认为这些性格很重要的人，反而比较不容易去改变自己的负面性格。**大家明白这其中的奥妙么？我想要摆脱古板的个性，我不喜欢自己那么古板，与此同时，言行一致在我看来是非常重要的品格。但是我反而不容易去改变自己的古板。因为在我的意识里，它们是相互关联的。对，我不想要古板下去了，同时我潜意识里有个小人却在说：我想要言行一致，别摆脱古板。**因为我把两者结合起来了，我把两者联系在一起了，因此不想舍其一**；因为我不想把婴儿和洗澡水一起倒掉，对于我来说两者是紧密相连的。同理，还有轻信和值得信赖。这两种品质可以说，**值得信赖的人，另一方面很容易轻信别人。**这种性格极端化以后，人会变得容易轻信别人，然而我却不想丢掉轻信别人的习惯，因为同时我不想丢掉我值得信赖的优点。同样的例子还有冷酷。**我的冷酷可能在潜意识里正反映出我的严肃认真**。
 
 很多年来，真的是很久以来，我在思考分析并写了很多关于**完美主义**的东西。我不能理解为什么我自身的情况长久以来并未好转——因为我知道自己深受完美主义其害。我读了研究报告，反省个人经历，我知道完美主义对我百害无益，有损于我的健康。从长远来看也阻挠我成功，但是我却摆脱不了它，直到我读了这个报告。于是我问自己：在我的意识里它和什么联系在一起？和它密切相联的是**动力和雄心**。如果我需要自我定义的话，首当其冲的，同时因为我不想失去这些品格，我的潜意识便阻止我摆脱对完美主义的追求。我对完美主义的定义是（我们会用整整一周来讲完美主义，到时候会讲的更深入一些）只有当我明白了这两者之间的密切关联，我才能够把它们拆开，分开。我只想保留其一。再比如担忧和焦虑（其实我已经说过很多次了）我最终摆脱了焦虑的困扰。下次我会和大家说说具体的过程。
 
-自从很久以前开始，我上大学的时候，每当有壁球比赛也好，或者是考试也好，或是在分组讨论的时候发言之前，我都会非常焦虑。我不想再这样下去了。我不想要焦虑。然而，我却丢不掉这种担忧和**焦虑**，因为我同时很重视责任感。如果我会焦虑，说明我有责任感，我会在上课前更认真的做准备而不是随便糊弄、偷懒。因此我把焦虑和正面品格责任感联系起来。还记得关于Brandon的故事吗？**责任感**是非常重要的品质，但是它却阻挠我摆脱担忧和焦虑。这都是在潜意识里发生的，我之前并没有意识到这些。
+自从很久以前开始，我上大学的时候，每当有壁球比赛也好，或者是考试也好，或是在分组讨论的时候发言之前，我都会非常焦虑。我不想再这样下去了。我不想要焦虑。然而，我却丢不掉这种担忧和**焦虑**，因为我同时很重视责任感。**如果我会焦虑，说明我有责任感**，我会在上课前更认真的做准备而不是随便糊弄、偷懒。**因此我把焦虑和正面品格责任感联系起来**。还记得关于Brandon的故事吗？**责任感**是非常重要的品质，但是它却阻挠我摆脱担忧和焦虑。这都是在潜意识里发生的，我之前并没有意识到这些。
 
 还有罪恶感。有好的罪恶感也有不好的罪恶感。我不想摆脱罪恶感，因为我不想变得对他人冷漠无情。我们经常会把这两者联系起来。还有一对概念，是精简化。这也是我的切身体会。我想要减少工作量，因为我明白同时参与太多活动有损于，有损于我的工作效率、创造力和健康。但是我却没办法做到精简。为什么呢？因为我将它和失去优势联系起来，所以我没办法做到精简。还有我们上周谈到的寻找过错。为什么人们不能停止寻找过错呢？为什么要维持悲观的态度呢？因为他们把寻找过错和现实主义联系起来。我不想放弃这种现实的态度，不想变成一个脱离现实盲目乐观的人，因此我不会放弃寻找过错的习惯。
 
