--- a/11.md
+++ b/11.md
@@ -1,30 +1,32 @@
-**\[第11集\] 养成良好习惯**
+**\[第11集\]  养成良好习惯**
 
-大家早上好！首先今天在座的有低年级父母吗？欢迎，欢迎，非常高兴你们能来。我更高兴你们周二没有来。我...要先宣布一点事，周二之后我一直问自己：“他们以后还会不会认真听我的话了。我希望如此，或者他们明天还会喜欢我吗？”
+大家早上好！首先今天在座的有低年级父母吗？欢迎，欢迎，非常高兴你们能来。我更高兴你们周二没有来。我...要先宣布一点事，周二之后我一直问自己："他们以后还会不会认真听我的话了。我希望如此，或者他们明天还会喜欢我吗？"
 
-好了，还是先宣布点事情吧。**首先**，我收到很多关于论文的邮件，你们写的感谢信也需要提交给你们的助教作为论文所以我的回答既不肯定也不否定。好了，也就是对你得提交，不过如果那封信过于私人，或者由于任意原因你不太愿意提交给你的助教，就直接给助教发“我写了那封信”，我们会信任你的，所以不是一定要提交。虽然最好是能提交。
+好了，还是先宣布点事情吧。
 
-一个半礼拜之后就要期中考，所以关于期中考我说几句。我们打算期中考，只出选择题，会有...不太记得了多少道。五十?五十道选择题。有75分钟的作答时间，这样就可以留出十分钟到十五分钟的时间来组织秩序。考试不会太难，要愚弄或是考倒你们，而是会考得很直接。
+**首先**，我收到很多关于论文的邮件，你们写的感谢信也需要提交给你们的助教作为论文，所以我的回答既不肯定也不否定。好了，也就是，对，你得提交，不过如果那封信过于私人，或者由于任意原因你不太愿意提交给你的助教，就直接给助教发“我写了那封信”，我们会信任你的，所以不是一定要提交。虽然最好是能提交。
 
-第一节课我曾告诉过你们我对考试的态度。如果你们还记得的话，过去我不太习惯弄考试，因为我记得我本科时就很讨厌考试。己所不欲勿施于人嘛！不过后来我意识到考试确实是有价值的，不是在于高低分化，或者成绩之类的，而在于期中考或期末考可以让你安下心来整合所有学过的知识。如果是家庭作业你可以找你所需的答案，你只掌握了部分的知识，但有期中考或期末考，你就能坐下来从第一课看到最后一课。而这可以帮助你整合知识，进而吸收掌握知识。
+一个半礼拜之后就要期中考，所以关于期中考我说几句。我们打算期中考只出选择题，会有...不太记得了多少道。五十?五十道选择题。有75分钟的作答时间，这样就可以留出十分钟到十五分钟的时间来组织秩序。考试不会太难，要愚弄或是考倒你们，而是会考得很直接。
+
+第一节课我曾告诉过你们我对考试的态度。如果你们还记得的话，过去我不太习惯弄考试，因为我记得我本科时就很讨厌考试。己所不欲勿施于人嘛！不过后来我意识到考试确实是有价值的，不是在于高低分化，或者成绩之类的，而在于期中考或期末考**可以让你安下心来整合所有学过的知识**。如果是家庭作业你可以找你所需的答案，你只掌握了部分的知识，但有期中考或期末考，你就能坐下来从第一课看到最后一课。而这可以帮助你整合知识，进而吸收掌握知识。
 
 请记住我反复强调的。这门课是基于螺旋形的知识体系的，也就是说我们在第一课中讲的内容，与第三课相联系，与第七课相联系，与第二十四课有联系，所有东西都是内在相连的。而只有你静下心来当我在讲某个知识时，我知道接下来的三周我会讲到什么，以及它们的联系。你们还不能，但当你们坐下来准备考试时，才能建立知识间的联系，才能从更高的层面真正吸收掌握知识。所以我们才要举行考试。我知道这不好玩，但对教学有好处。静下心来把知识过一遍是很重要的。不管是期中考还是期末考，再说一次，不会很难，但一定要复习。考试会很直接，基于事实可以想象得到期中考不是要展示创造力，我们的目标是让你们回顾并掌握知识。有任何问题可以给助教发邮件，他们会给予回复。如果没有，那就发邮件给我好了。
 
 上回讲到哪了？其实我不太记得了，我好像忘了上节课的内容。不过有人跟我说我跳过了一些东西，以便最后能完成我的节目。有一样被跳过的东西我想回头讲一下，在我们谈到**身体反馈假说**之后，还记得身体反馈假说吗？你握手的方式，言谈举止，还有面部反馈假说，包括微笑、皱眉，这向他人传递了特定的信息，然后他人再反馈回来给我们。与此同时，我们也在和自己沟通。
 
-我自信吗？骄傲吗？或者我害怕恐惧吗？很多时候我们需要，正如我所说“不断伪造方能成真”。因为我们的身体行为给我们的思想以及情感提供信息，并影响它们。
+我自信吗？骄傲吗？或者我害怕恐惧吗？很多时候我们需要，正如我所说，“不断伪造方能成真”。**因为我们的身体行为给我们的思想以及情感提供信息，并影响它们。**
 
 有一个很不错的研究，由Haemmerlie以及第二作者Montgomery完成。Haemmerlie和Montgomery做了如下研究：他们招募了一些内向的直男，招募他们进行研究内向的性取向正常的男人。研究是按如下方式进行的。这些人被告知研究就是做一些特定的测试，他们被邀请到William James大楼，然后被告知“很不幸我们进度落后了，所以你得稍等，必须在研究开始之前稍作等待。”同时等候室在这里，有很多人也在等候做相同的测试。“等到了的时候我们会来叫你，可能得等一会，抱歉。我们会付你额外等待时间的酬劳的。”于是他就在等候室里等候，还有一个人和他一起等，一位女性。
 
 他并不知道她其实是共谋者，是研究的一部分，他以为她和他一样在等候，也在等候进行测试，于是他和一个女人一起坐了12分钟。那个女人的任务是与这个内向直男发起对话，并对他所说的东西表现出极大的兴趣和兴奋感。于是他们互相倾听，互相提问“哇！真的吗？”他们在12分钟里谈笑风生，然后，那女人进去做他们以为的测试，另一个女人再进来。又是12分钟，她和这个内向直男坐在一起，表现极大的兴趣，对他说的话发笑，向他提问，诸如此类聊12分钟。她进去做试验之后，下一个女人又进来，如此类推，一共六次。六个女人坐在这些内向直男身边，对他们所说的话表现极大的兴趣，开启对话，一共72分钟。然后再进行所谓的真正的试验。然后第二天，他们又被邀请参加同样的试验，再把完全一样的流程走一遍。72分钟里，他们和六个女人分别坐在一起。她们对他们的谈话内容表现极大兴趣。
 
-当然了，这个试验要研究的就是这会有什么效果，这种行为对于他们的内向会有什么效果。而答案是非常大。接下来的半年里，跟踪调查发现，这些男人突然变得没那么紧张了。总体上来说，尤其是在女人旁边，他们没有那么害羞了。这些男人很多是人生中第一次开始发展感情，开始约会。在144分钟的干预以后，天翻地覆的变化。
+当然了，这个试验要研究的就是这会有什么效果，这种行为对于他们的内向会有什么效果。**而答案是非常大**。接下来的半年里，跟踪调查发现，这些男人突然变得没那么紧张了。总体上来说，尤其是在女人旁边，他们没有那么害羞了。这些男人很多是人生中第一次开始发展感情，开始约会。**在144分钟的干预以后，天翻地覆的变化**。（有时候积极主动的干预，很有效果）
 
 但有一个问题，许多心理学实验的普遍问题是什么，就是必须向受试者报告结果。没错，你得报告结果。因此半年后，试验结束，研究者重新聚集受试者，告诉他们这只是个研究，而那些女人其实是试验的一部分，是被要求表现出兴趣的。很残忍对吧，但并不像预想的那样，这对那些男人没有影响。因为那时，他们已经外向了许多。他们与异性相处愉快，他们出去约会，他们不再那么内向，这开启了一个良性循环，已经完全没关系了。**144分钟改变了他们的生活，至少从约会的角度来看。**为什么呢？
 
 回忆一下Bandura对自我效能的研究，**没有比成功本身对成功更好的催化剂。**当他们成功时，做得很好时，他们能看到自己做得很好----自我知觉理论。关于对自我的认识和感知，使他们进入良性循环，并且保持这个良性循环。我们刚刚讲了“不断伪造方能成真”。再看看Marva Collins先祖伦理，很重要的犹太教教义写道“那些行为超越其智慧的人，他们的智慧将恒久，但那些智慧超越其行为的人。”如果能记住我说过的，当我们参加讨论会或者上课，并从认知水平上理解它。即便有灵光乍现的时刻，有突破，也不会发生什么。除非我们的行为跟上了这新闪现的智慧，为什么呢？
 
-因为我们**首先塑造习惯，然后习惯再反过来塑造我们。**假设我们在参加学术讨论或上课之前是这个水平，然后我们的态度改变了，但行为没变，态度会随着时间流逝被习惯又拉回来。所以只有我们随着时间改变习惯，开始做点什么，比如说，强迫自己做些事解决些问题或者开始做感恩的训练，或者平时经常写信，或者开始做运动，可以证明是最有力的干预，来解决焦虑、沮丧以及多动症。除非我们很快开始做这些事，否则这改变就会是短暂的，我们很快会回到原来的状态。**持久的长远的改变，态度的改变必须要使行为与之匹配。**
+因为我们**首先塑造习惯，然后习惯再反过来塑造我们。**假设我们在参加学术讨论或上课之前是这个水平，**然后我们的态度改变了，但行为没变，态度会随着时间流逝被习惯又拉回来**。所以只有我们随着时间改变习惯，开始做点什么，比如说，**强迫**自己做些事解决些问题或者开始做感恩的训练，或者平时经常写信，或者开始做运动，可以证明是最有力的干预，来解决焦虑、沮丧以及多动症。除非我们很快开始做这些事，否则这改变就会是短暂的，我们很快会回到原来的状态。**持久的长远的改变，态度的改变必须要使行为与之匹配。**
 
 Dan Millman我几周前在课上提过他在《**深夜加油站遇见苏格拉底**》一书中，探讨了行动与改变的重要性。他说，我引述“要改变人生轨迹，就要从两种基本方法中选择。其一，你可以指引你的能量及注意力，用其整理思想，集中精神，巩固力量，释放情感以及想象乐观结果，从而使你最终获得自信，鼓起勇气，下定决心做出承诺，获得充分的激励去做你要做的事。其二，你也可以直接去做。”有时说起来容易，做起来难，但通常，例如跳入水中这个行为，做出行动本身和所有前期准备有一样的效果，或者效果更好，能形成良性循环。
 
