--- a/16.md
+++ b/16.md
@@ -3,11 +3,13 @@
 
 我们今天要把完美主义讲完，然后开始讲精神肉体。这个学期对我来说挺不错的，没有什么东西让我后悔做过，不过下次我还想挑战别的。教这门课时，我现在知道了，应该更早讲精神肉体的，因为这个话题十分重要，它是如此根本而且基础，因此当我意识到，在这个学期很早的时候就意识到，我应该早点讲，我那时就开始停止介绍身体锻炼，开始讲“念”的概念，从较低一点的层次来介绍它。今天，在一两个月之后，我们要再讲讲精神和肉体的联系，身体的健康，首先我们先把完美主义讲完。
 
+[完美主义----开始]
+
 上节课我们讲到了两个模型，完美主义的基模，一条从A到B的直线，以及追求卓越的基模，更像是蜿蜒曲折的螺旋上升。有些人昨天在办公时间来问我：“区别到底在哪里？”我们可以用无意义追逐目标的人来类化，还记得那个72岁的人吗？他达到了很高的地位，管理着世界的中心，在承受了一生的压力，不停地追逐到达B点，而不是享受当下，享受旅途之后被告知：退休的时候到了。
 
 我问你们一个简单的问题：“你想要怎样的生活？”那么另一种模型是怎样的呢？积极的模型是怎样的？
 
-积极的模型从外表上看来似乎一摸一样，可能也是一个充满雄心壮志的人，极度勤奋刻苦的人，可能是个投资银行家或者是个医生，或者律师，老师，或者在流浪者之家工作。从外表上看可能完全一样，但其内在则是迥然相异。怎么个迥然相异法呢？区别在于这个追求卓越的人，也许同样充满雄心，用同样的目标，也可能达到了同样的目标，然而这个人同时享受这个旅程。这就是区别所在，是的。他或她会进入名校，进入他们非常想进的学校。在学校里他们非常勤奋刻苦，但同时他们也知道，他们几乎可以，不是完全，但几乎可以，享受他们再学校的所有时光，同样的起伏坎坷，同样的兴衰变迁，但他们享受这个过程，然后获得他们想要的工作，或者他们想要的工作之一，然后继续努力工作，充满雄心壮志，每周工作80个小时，然而这个人同样享受整个过程。然后他们享受下一个旅途，和别人合作。成为别人的搭档，当上营销总监之类的。唯一的区别就在于他们享受这个过程。
+积极的模型从外表上看来似乎一摸一样，可能也是一个充满雄心壮志的人，极度勤奋刻苦的人，可能是个投资银行家或者是个医生，或者律师，老师，或者在流浪者之家工作。从外表上看可能完全一样，但其内在则是迥然相异。怎么个迥然相异法呢？区别在于这个追求卓越的人，也许同样充满雄心，用同样的目标，也可能达到了同样的目标，**然而这个人同时享受这个旅程。这就是区别所在**，是的。他或她会进入名校，进入他们非常想进的学校。在学校里他们非常勤奋刻苦，但同时他们也知道，他们几乎可以，不是完全，但几乎可以，享受他们再学校的所有时光，同样的起伏坎坷，同样的兴衰变迁，但他们享受这个过程，然后获得他们想要的工作，或者他们想要的工作之一，然后继续努力工作，充满雄心壮志，每周工作80个小时，然而这个人同样享受整个过程。然后他们享受下一个旅途，和别人合作。成为别人的搭档，当上营销总监之类的。唯一的区别就在于他们享受这个过程。
 
 我还可以举出一些实例，其中之一就是我的前室友，他是个投资银行家，我们一起上大学，也是96届的，毕业之后，由于其经济学的专业，给一个著名的对冲基金工作。之后他就回到哈佛获得法律博士和工商管理硕士的双学位，学业非常优秀，之后就获得了所有他想要的机会。他又选择了另一家对冲基金，之后他又自立门户和一些朋友一起开了一家公司，当我和他谈起投资银行时，我对此了解很少，我对投资银行表现得很兴奋，因为他的兴奋能感染我，他每天都期待着工作，他工作的时间也很长，他就是一个追求卓越的例子。虽然从表面上看就和我之前描述的形象一模一样，因此不是我们要是去雄心壮志，也不是变得没有竞争力，如果那能让你快乐的话，这只是让你学会享受过程，朝着你认为有意义的目的地所迈出的步子才是最重要的。
 
