--- a/19.md
+++ b/19.md
@@ -14,13 +14,25 @@
 
 解决冲突的要点之一**在于确立一个超然目标**，当两个民族或国家共同努力，彼此互助，无论在公事上还是恋情上。例如共同抚养孩子，只要共同努力，不管属于同一个政治阵营还是相对立的两个政治阵营，都可以。只要共同努力，彼此支持对方，当你们共同努力，共同参与时，才是你们可能解决冲突之时，我们很快就会看到这样的冲突，反而还能让恋情变得更加巩固。**但情侣间需要共同的有意义的目标。**再说一遍，可以是一起要个孩子，共同抚养，不是“我们有个孩子由父亲或母亲抚养，通常会是母亲。”这样不算是共同努力了，孩子必须处于一种微妙的位置，用专业术语来说，孩子应是合资企业。用这个语术来比喻生孩子是不是很有爱？只要他们不带来任何坏账，对他们的投资会带来很好的回报，非常适合的经济学术语，琢磨琢磨一下就往上套。共同做事，共同抚育孩子，或是共同参与竞选或在工作上给对方帮助，但要共同为之。John Gottman说过“最稳固的婚姻里，丈夫与妻子彼此间深度融合，他们不只是一起生活，他们还支持彼此的愿望与抱负，为他们的生活融入共同的目标。”这不是说他们要什么都一起做，我的意思是他或她可以在工作上有自己的目标，而他们并不一起工作，这完全没问题，但是必须要有他们共同做的事。**换言之，我们需要的是主动的爱情**。
 
-我第一次理解主动爱情的含义，还是通过Shaher给我讲的一个故事，他是我在以色列最好的朋友之一，我们过去是同班同学，不过他很早就结婚了，他20出头就结婚了，很快有了儿子，他是一个非常善于自省很诚实很正直的人。他告诉我，刚生儿子Noam时，当他的母亲与妻子带着Noam从医院回到家，Shahar并未感受到对Noam的爱，儿子很可爱，很招人喜欢，但他对儿子没有自己想象中那么深爱，更别提他对此有多愧疚了，幸运的是这没有持续很久，因为自从Shahar开始照顾儿子，比如为他换尿布，大半夜起来给他喂奶，带他散步，给他擦洗身体，爱就这样培养出来了，平生第一次他感到了父亲对儿子的爱。这感情不是自然而然便有的，对有些人是天生的，尤其是女性，但不是女生都是这样，总体来说高于男人。我们可以等着这感觉自然发生，也可以主动参与其中，表达我们的爱，还记得自我知觉理论吗？我们总是以自己的行为为基础形成自我的理论及信条，我们过去曾讲过的例子，如果我想象自己会去约会某人，即便她们说不，我也感到了自信，无论对方答不答应，我的自尊都会上升。若我想象自己能去演戏，我会感到自己是有勇气的，如果我感到自己，如果我照顾自己，我会感到自己是自尊自爱、关心自己或关心她的人。这对孩子也是一样的，若我想象自己能照顾孩子，根据自我知觉理论我会得出“我一定很爱那孩子”的结论，这爱会随着时间而加深，无论是对孩子还是对伴侣，爱情开始时也许是自发感受到的，也许是一见钟情，尽管如此，若我们不主动维持爱情，长此以往，由于自我知觉理论，那份最初的激情会淡去，因为我们没在恋情中有所投入，自我知觉理论会告诉我们“这恋情对我一定不怎么重要”爱情慢慢淡去，更不必提激情被时间冲刷掉的生理原因了，如果没有主动爱情，则恋情无以为继。我们怎样维持爱情？保持主动？恋情老规矩，我们谈过老规矩，我跟你们讲过我和我妻子的老规矩至少每周两次与全家共进晚餐，一般每周会有三四次。但我们确有这些老规矩，因为现代社会，若没有这些老规矩，用Steven Covey的话说是，重要却非常紧急，重要却非常紧急的活动就会被冷落。即便我们知道出去约会很重要，但不如刚接到的工作来电紧急，所以我不得不放弃约会，留下来加班。然而若有老规矩，不管遇到什么事都坚持老规矩，感情就得以维持。  
-第二种维持爱情重要的途径是做出改变，从想要被认可，到想要被了解。这个建议来自David Schnarch  
-出自他的书“充满激情的婚姻”，就是这个简单的建议，真正地改变了我与人们的关系，包括我与妻子的恋情，我与朋友的友情，与家人的亲情，甚至于师生情。这点在以前提过，再讲深一点，因为这对维持激情至关重要，对于维持友情，维持快乐，维持个人内心的以及人与人之间的快乐，这意味着什么呢？什么叫被了解而非被认可呢？首先，David Schnarch及其他心理学家表明了，如果我们想在蜜月期后，在一见钟情后，仍然维持着激情，我们就得形成深层次的亲密关系，那些接受我们研究调查的伴侣，他们已共同生活了几十年，却依然有着充满激情的恋情。很不幸，这样的伴侣少之又少，但确实存在，他们一生都在培养，并一直培养，而非花一生时间寻找亲密的关系，你们知道怎样培养亲密的关系吗？通过逐渐了解对方，逐渐加深了解，通过理解对方，通过像了解自己一样了解对方。这意味着，我们若决心让对方了解自己我们就必须打开心扉，我们必须吐露心声，这意味着我们得彼此分享，不只是那些在首次约会分享的精彩美妙的事，当然也包括这些，但是除此以外还包括一些让我们不怎么自豪的事，也许是我们的弱点，也许是我们耻于提及的，让我们觉得不舒服的，不为人知的事情，这些事不会在首次约会上讲出来，这也不该在首次约会讲，很多情况下，甚至不会在五年十年内讲，只有经过长年累月的信任加增，逐渐坦露出来，有时我们坦露的是自己都不知道的，被我们压抑了很久的事。但这需要时间，这也是要回到David Schnarch关于脂肪团和性能力的言论上。这通常发生在10年20年30年后，这也是为什么到了五六十岁时，甚至会有比18、20、30岁时更强的性能力。倒不是说18、20、30岁时不好，而是会比年轻时更好，为什么？因为有了更深层的亲密联系。若我们理解了充满激情的关系的本质，这段关系就有很多东西值得我们期待，这不能紧靠“我们在一起，我找到了梦中情人，我们会幸福一生”不是这样的，这有时是有风险的。意味着除了坦露我们内心深处的需求，我们最深的幻想，我们最厉害的长处，还有我们的缺点，我们的不安及痛苦。要坦露，要敞开心扉，就要做到这些，这意味着一段健康的恋情，需要我们表达自己，而非长期抑制自己。这就是被了解与被认可的区别。被了解是要表达自己，被认可则是要取悦别人。这样做是有缺点，敞开心扉表达自己风险更高，因为若她不喜欢这样的我怎么办？如果他深入了解我后，不喜欢我怎么办？但是要知道当我们表达自己时，我们更可能收获一段美好的恋情，但是没什么可以保证一定就有好恋情，这无法保证的，然而若我们一味抑制自己，失败是肯定的，原因如下，首先，当我们逐渐敞开心扉也许短时间内没有效果，但是随着时间的流逝人们会被我们吸引，特别是我的伴侣会逐渐更喜欢我，因为我们有了深层次的亲密关系，即便有时他们对于刚了解的关于我们的事不是很喜欢或赞成，但久而久之，真诚的人会吸引到其他人，而且这种方法也适用于人际关系领域，它是用于友情，适用于提高领导能力。像Peter Drucker阐述的那样，最伟大的领导不是最有魅力的，也不是最迷人的那些人，而是极其诚实正直的人，这样的领导，他的属下会长久追随他。无论是团体间的人际关系还是个人之间的私交关系，只要我们坦诚，就更可能被容纳接受。第二件事应该时刻谨记的是，如果我给人留下了一个很好的印象，使得这个人或者这群人都很喜欢我，这奏效了，我成功了，可这是真的吗？他们喜欢的是谁呢？他们喜欢的我还是那个形象，是我塑造的那个戴着面具的人吗？换言之，他们喜欢的不是真正的我，也许看起来是，但那不是真的。这喜欢是假象，换言之，我失败了，而且这种假象也维持不太久，所以说坦诚相待更可能持久，而当我们的目标是给人留下一个好印象时，这种情形持久的可能性为零，这并不是要你在第一次约会就放弃尝试给对方留下深刻印象，我是说我还没见过谁没尝试过，在首次甚至第十次约会、乃至第十次约会给对方留下深刻印象，这是可以的，然而共同生活最重要的动因是什么？就像我们前面说的那样，敞开心扉。我们还需要积极努力，去了解我们的伴侣，去了解他们爱喝的红酒，喜欢的花，他们喜欢哪里被咯吱、哪里喜欢被触碰，他们怕什么，渴望什么，什么时候该给他们一些独处的空间，什么时候该和他们沟通，什么时候该触碰他们，所有这些都需要时间，这不可能在首次约会时实现，也不会在第一年里实现，不会在头10年或30年全部实现，这意味着我们要用一生的时间去了解对方，营造一生的美好恋情。我的祖父祖母是我在感情方面的榜样，他们在一起50年后，还在继续了解对方，他们的感情很好，他们的感情还没圆满，而是正在圆满。David Schnarch说过“亲密就是让你自己被真正的了解，即使是你或你伴侣不喜欢的也要被了解，但这并不代表坦露的都是缺点，有时也会是一直没发现的优点，大部分方法都专注于你的伴侣，在你坦露时认同和接受你，但你不能寄希望于此，如果你心存这样的意图，那么你坦露心声时必然有所掣肘，因你只会说那些让你的伴侣认可的话，打破僵局需要亲密关系，这基于认可你自己。”大多数婚姻咨询师，性治疗师认为，一段恋情中最重要的，一段健康长久的恋情中最重要的是伴侣间彼此认可，这很重要。我当然想被对方认可，我当然认可我的伴侣，然而这不是健康恋情的基础，而这是很多治疗师，很多夫妻以及我曾犯过的错误。没有认识到被了解才是基础，无论是在一段恋情中还是与朋友的友情中，当你坦露心声时，你是冒着风险的，而且很多时候这会引发冲突，破坏感情。然而通常，几率不是特别高，但通常，这只是短暂的破坏。另一方面，若你长期坦诚敞开胸怀，这会引领你走向长久的感情，对恋情是有积极效果的。一方面来看，你坦诚时肯定会觉得不舒服，舒服的话也就不难了，也就不算真正的坦诚。短期来看这是很难的，但从长远看，它能助长感情，关键在于你想要什么？要短暂的舒服感觉？你被认可了，你很棒，我来让你看看我有多优秀，因为被认可的感觉很好，还是你想要一段长久而美好的友情或是恋情？这是个问题，接下来的话我几个月前就讲过，现在我想再重申一次。我是怎样改变与学生的关系的，怎样转变我的教学方式，因为最初的教学时，我的主要目标是不管讲得是否清楚明白，当时确实很清楚，但潜意识里最主要是想被认可，我真的很想让我的学生喜欢我，那是我的主要目标，慢慢的，看了很多人的著作，尤其是David Schnarch的书，还有Parker Palmer的“教学的勇气”我的目标变为了被了解，这是我现在的咒语了，每天上讲台前，我天天想着并念着我的咒语，其实这就写在我的笔记本第一页，这是我的笔记本，这些是我的笔记，我的小炒，第一行字就是“被了解”每天都是被了解而非被认可，这改变了我与学生的关系以及教学方式，原因有下。首先，老是想着“我得让给他们觉得我很厉害，无论是对于我的伴侣还是一千个学生”压力太大了，这样很难，带给我太多压力了，而若是站在这里说“我想让我的学生更了解我”就简单多了，这也意味着要了解那个我非常喜欢和关心的领域，我想要他们的了解，这让我觉得轻松。当我想被Tammy了解，而不是让她有个好印象，让她认可我时我就觉得和她在一起轻松多了，这是第一个要点。长期想取悦别人的缺点是，若我们戴着面具且不断不断地试着让自己被认可，看起来很完美，以便让学生喜欢我认可我，但这样做的同时也伤害到了学生，因为若我擅于演戏伪装，扮演一个完美老师的角色，我就变成一个很差劲的榜样，久而久之会伤害到学生，因为那个完美的我并不存在。如果有人想向这个完美的形象看起，无论是感情中还是在个人问题上，都不可避免地通往完美主义，也是通往失败与不幸。除非我是想被了解，也就是说我的缺点，我的失败之处，不管是在剑桥还是在哈佛的失败，或是我的焦虑，你们会见到真实的我，或是犯错误，你们见到的是真实的我，这样的我是一个更好老师，相较于那个完美形象更平易近人，好过那个被认可的我，除此以外，这样的我也更快乐，因为我在这里与你们分享，我在分享自己的一部分内心世界，我与大家分享的是我非常喜欢和关心的。  
+我第一次理解主动爱情的含义，还是通过Shaher给我讲的一个故事，他是我在以色列最好的朋友之一，我们过去是同班同学，不过他很早就结婚了，他20出头就结婚了，很快有了儿子，他是一个非常善于自省很诚实很正直的人。他告诉我，刚生儿子Noam时，当他的母亲与妻子带着Noam从医院回到家，Shahar并未感受到对Noam的爱，儿子很可爱，很招人喜欢，但他对儿子没有自己想象中那么深爱，更别提他对此有多愧疚了，幸运的是这没有持续很久，因为自从Shahar开始照顾儿子，比如为他换尿布，大半夜起来给他喂奶，带他散步，给他擦洗身体，爱就这样培养出来了，平生第一次他感到了父亲对儿子的爱。
+
+这感情不是自然而然便有的，对有些人是天生的，尤其是女性，但不是女生都是这样，总体来说高于男人。**我们可以等着这感觉自然发生，也可以主动参与其中，表达我们的爱**，还记得自我知觉理论吗？**我们总是以自己的行为为基础形成自我的理论及信条**，我们过去曾讲过的例子，如果我想象自己会去约会某人，即便她们说不，我也感到了自信，无论对方答不答应，我的自尊都会上升。若我想象自己能去演戏，我会感到自己是有勇气的，如果我感到自己，如果我照顾自己，我会感到自己是自尊自爱、关心自己或关心她的人。这对孩子也是一样的，若我想象自己能照顾孩子，根据自我知觉理论我会得出“我一定很爱那孩子”的结论，这爱会随着时间而加深，无论是对孩子还是对伴侣，爱情开始时也许是自发感受到的，也许是一见钟情，尽管如此，若我们不主动维持爱情，长此以往，由于自我知觉理论，那份最初的激情会淡去，因为我们没在恋情中有所投入，自我知觉理论会告诉我们“这恋情对我一定不怎么重要”爱情慢慢淡去，更不必提激情被时间冲刷掉的生理原因了，如果没有主动爱情，则恋情无以为继。我们怎样维持爱情？保持主动？恋情老规矩，我们谈过老规矩，我跟你们讲过我和我妻子的老规矩至少每周两次与全家共进晚餐，一般每周会有三四次。但我们确有这些老规矩，因为现代社会，若没有这些老规矩，用Steven Covey的话说是，重要却非常紧急，重要却非常紧急的活动就会被冷落。即便我们知道出去约会很重要，但不如刚接到的工作来电紧急，所以我不得不放弃约会，留下来加班。然而若有老规矩，不管遇到什么事都坚持老规矩，感情就得以维持。  
+
+第二种维持爱情重要的途径是做出**改变**，**从想要被认可，到想要被了解**。这个建议来自David Schnarch  出自他的书《充满激情的婚姻》，就是这个简单的建议，真正地改变了我与人们的关系，包括我与妻子的恋情，我与朋友的友情，与家人的亲情，甚至于师生情。这点在以前提过，再讲深一点，因为这对维持激情至关重要，对于维持友情，维持快乐，维持个人内心的以及人与人之间的快乐，这意味着什么呢？什么叫被了解而非被认可呢？首先，David Schnarch及其他心理学家表明了，如果我们想在蜜月期后，在一见钟情后，仍然维持着激情，我们就得形成深层次的亲密关系，那些接受我们研究调查的伴侣，他们已共同生活了几十年，却依然有着充满激情的恋情。很不幸，这样的伴侣少之又少，但确实存在，他们一生都在培养，并一直培养，而非花一生时间寻找亲密的关系，你们知道怎样培养亲密的关系吗？通过逐渐了解对方，逐渐加深了解，通过理解对方，通过像了解自己一样了解对方。这意味着，我们若决心让对方了解自己我们就必须打开心扉，我们必须吐露心声，这意味着我们得彼此分享，不只是那些在首次约会分享的精彩美妙的事，当然也包括这些，但是除此以外还包括一些让我们不怎么自豪的事，也许是我们的弱点，也许是我们耻于提及的，让我们觉得不舒服的，不为人知的事情，这些事不会在首次约会上讲出来，这也不该在首次约会讲，很多情况下，甚至不会在五年十年内讲，只有经过长年累月的信任加增，逐渐坦露出来，有时我们坦露的是自己都不知道的，被我们压抑了很久的事。但这需要时间，这也是要回到David Schnarch关于脂肪团和性能力的言论上。这通常发生在10年20年30年后，这也是为什么到了五六十岁时，甚至会有比18、20、30岁时更强的性能力。倒不是说18、20、30岁时不好，而是会比年轻时更好，为什么？因为有了更深层的亲密联系。若我们理解了充满激情的关系的本质，这段关系就有很多东西值得我们期待，这不能仅靠“我们在一起，我找到了梦中情人，我们会幸福一生”。不是这样的，这有时是有风险的。意味着除了坦露我们内心深处的需求，我们最深的幻想，我们最厉害的长处，还有我们的缺点，我们的不安及痛苦。
+
+要坦露，要敞开心扉，就要做到这些，这意味着一段健康的恋情，需要我们表达自己，而非长期抑制自己。
+
+**这就是被了解与被认可的区别。被了解是要表达自己，被认可则是要取悦别人。**这样做是有缺点，敞开心扉表达自己风险更高，因为若她不喜欢这样的我怎么办？如果他深入了解我后，不喜欢我怎么办？**但是要知道当我们表达自己时，我们更可能收获一段美好的恋情，**但是没什么可以保证一定就有好恋情，这无法保证的，然而若我们一味抑制自己，失败是肯定的，原因如下。
+
+**首先**，当我们逐渐敞开心扉也许短时间内没有效果，但是随着时间的流逝人们会被我们吸引，特别是我的伴侣会逐渐更喜欢我，因为我们有了深层次的亲密关系，即便有时他们对于刚了解的关于我们的事不是很喜欢或赞成，**但久而久之，真诚的人会吸引到其他人**，而且这种方法也适用于人际关系领域，它适用于友情，适用于提高领导能力。像Peter Drucker阐述的那样，最伟大的领导不是最有魅力的，也不是最迷人的那些人，**而是极其诚实正直的人**，这样的领导，他的属下会长久追随他。无论是团体间的人际关系还是个人之间的私交关系，只要我们坦诚，就更可能被容纳接受。
+
+第二件事应该时刻谨记的是，如果我给人留下了一个很好的印象，使得这个人或者这群人都很喜欢我，这奏效了，我成功了，可这是真的吗？他们喜欢的是谁呢？他们喜欢的我还是那个形象，是我塑造的那个戴着面具的人吗？换言之，他们喜欢的不是真正的我，也许看起来是，但那不是真的。这喜欢是假象，换言之，我失败了，而且这种假象也维持不太久，所以说坦诚相待更可能持久，而当我们的目标是给人留下一个好印象时，这种情形持久的可能性为零，这并不是要你在第一次约会就放弃尝试给对方留下深刻印象，我是说我还没见过谁没尝试过，在首次甚至第十次约会、乃至第十次约会给对方留下深刻印象，这是可以的，然而共同生活最重要的动因是什么？就像我们前面说的那样，敞开心扉。**我们还需要积极努力，去了解我们的伴侣，去了解他们爱喝的红酒，喜欢的花，他们喜欢哪里被咯吱、哪里喜欢被触碰，他们怕什么，渴望什么，什么时候该给他们一些独处的空间，什么时候该和他们沟通，什么时候该触碰他们，所有这些都需要时间，这不可能在首次约会时实现，也不会在第一年里实现，**不会在头10年或30年全部实现，这意味着我们要用一生的时间去了解对方，营造一生的美好恋情。我的祖父祖母是我在感情方面的榜样，他们在一起50年后，还在继续了解对方，他们的感情很好，他们的感情还没圆满，而是正在圆满。David Schnarch说过“亲密就是让你自己被真正的了解，即使是你或你伴侣不喜欢的也要被了解，但这并不代表坦露的都是缺点，有时也会是一直没发现的优点，大部分方法都专注于你的伴侣，在你坦露时认同和接受你，但你不能寄希望于此，如果你心存这样的意图，那么你坦露心声时必然有所掣肘，因你只会说那些让你的伴侣认可的话，打破僵局需要亲密关系，这基于认可你自己。”
+
+大多数婚姻咨询师，性治疗师认为，一段恋情中最重要的，一段健康长久的恋情中最重要的是伴侣间彼此认可，这很重要。我当然想被对方认可，我当然认可我的伴侣，然而这不是健康恋情的基础，而这是很多治疗师，很多夫妻以及我曾犯过的错误。没有认识到被了解才是基础，无论是在一段恋情中还是与朋友的友情中，当你坦露心声时，你是冒着风险的，而且很多时候这会引发冲突，破坏感情。然而通常，几率不是特别高，但通常，这只是短暂的破坏。另一方面，若你长期坦诚敞开胸怀，这会引领你走向长久的感情，对恋情是有积极效果的。一方面来看，你坦诚时肯定会觉得不舒服，舒服的话也就不难了，也就不算真正的坦诚。短期来看这是很难的，但从长远看，它能助长感情，关键在于你想要什么？要短暂的舒服感觉？你被认可了，你很棒，我来让你看看我有多优秀，因为被认可的感觉很好，还是你想要一段长久而美好的友情或是恋情？这是个问题，接下来的话我几个月前就讲过，现在我想再重申一次。我是怎样改变与学生的关系的，怎样转变我的教学方式，因为最初的教学时，我的主要目标是不管讲得是否清楚明白，当时确实很清楚，但潜意识里最主要是想被认可，我真的很想让我的学生喜欢我，那是我的主要目标，慢慢的，看了很多人的著作，尤其是David Schnarch的书，还有Parker Palmer的“教学的勇气”我的目标变为了被了解，这是我现在的咒语了，每天上讲台前，我天天想着并念着我的咒语，其实这就写在我的笔记本第一页，这是我的笔记本，这些是我的笔记，我的小炒，第一行字就是“被了解”每天都是被了解而非被认可，这改变了我与学生的关系以及教学方式，原因有下。首先，老是想着“我得让给他们觉得我很厉害，无论是对于我的伴侣还是一千个学生”压力太大了，这样很难，带给我太多压力了，而若是站在这里说“我想让我的学生更了解我”就简单多了，这也意味着要了解那个我非常喜欢和关心的领域，我想要他们的了解，这让我觉得轻松。当我想被Tammy了解，而不是让她有个好印象，让她认可我时我就觉得和她在一起轻松多了，这是第一个要点。长期想取悦别人的缺点是，若我们戴着面具且不断不断地试着让自己被认可，看起来很完美，以便让学生喜欢我认可我，但这样做的同时也伤害到了学生，因为若我擅于演戏伪装，扮演一个完美老师的角色，我就变成一个很差劲的榜样，久而久之会伤害到学生，因为那个完美的我并不存在。如果有人想向这个完美的形象看起，无论是感情中还是在个人问题上，都不可避免地通往完美主义，也是通往失败与不幸。除非我是想被了解，也就是说我的缺点，我的失败之处，不管是在剑桥还是在哈佛的失败，或是我的焦虑，你们会见到真实的我，或是犯错误，你们见到的是真实的我，这样的我是一个更好老师，相较于那个完美形象更平易近人，好过那个被认可的我，除此以外，这样的我也更快乐，因为我在这里与你们分享，我在分享自己的一部分内心世界，我与大家分享的是我非常喜欢和关心的。  
 被了解而非被认可，说起容易做来难。但是利大于弊，尤其是长远看来，好处远远大于弊处。
 
 第三点是要允许恋情中出现冲突。关于健康恋情的一个误解是，健康恋情没有冲突、没有争吵。五星级的恋情不会发生冲突，这是一个很严重的误解。John Gottman曾对此做过很多研究，它得出的结论之一是，不存在所谓唯一的标准恋情。这也意味着每段恋情看起来都不同，无论外人看来，还是自己看。有一些恋情美好而安宁，有一些恋情则美好却激烈。两种都可持续下去，恋情没有统一的正确形式，恋情可以有无数种模式及不同之处。但健康恋情都有一个共同之处，Gottman发现的一个共同之处，那就是在所有的恋情中无论是激烈的还是非常平和安宁的或是两者兼之的恋情，都有争执。而且平均来看，只是平均来看，因为有些人可能是10:1，有些人可能是3:1，但是平均来看，每五次积极互动就会有一次争执。这并不是让你回家去和伴侣说“我们已经有7次积极互动了，现在该吵架了。”绝不是这样，但这是他研究发现的。当他研究了成百上千的和睦夫妻后，差不多这是积极互动与争执冲突的平均比率。这个数据启发到我，因为过去只要Tammy和我发生争吵，我们也会发生争吵，我就会说“这是怎么了？”而不是说“这很正常，不用担心，看看该怎么解决这冲突，从中学到什么，怎样改进。”这并不是说我喜欢冲突，冲突不好，有时很伤感情，但同时要理解到这是正常的，就像我们允许自己有个人的不足之处一样，我们要允许我们的关系存在不足，这是很重要的。那些实现了5:1比率的人们都基本上有一段美好的恋情，而那些低于此比率，如100比1的，这样的感情并不能长久地美好下去，那些冲动于积极互动的伴侣也维持不下去，完全不吵不好，经常吵也不好。冲突的重要性在于它使我们免疫，先来看自然或生理上的免疫。若把一个出生的婴儿放入消过毒的储氧箱，而不把他抱出来，这个孩子会怎样呢？比如说两三年甚至十年后，孩子长大了，离开洁净的环境，回到真实的世界生活，他会怎样呢？他很有可能会生病，且很可能是重病，为什么？因为在无菌环境里生长就生理上说是不讲康的，因为每次你生病或是每次你暴露于污染与细菌中，你的身体都会因为产生抗体而变强。这对恋情也是同样的道理，如果你的恋情从不发生冲突，久而久之，恋情无法得到巩固加强，你会变得脆弱，当冲突无可避免时，恋情就会难以维持。所以说冲突使我们免疫，这很重要，再谈一下冲突的种类与形式，因为不是每种冲突都有益，Gottman说过关键不在于消除负面的东西，而是要强调巩固积极的东西，所以对于那些不成功的恋情，那些经常发生争吵的恋情，像这样的恋情。强调积极方面，而若是处于这种无冲突恋情，很可能你们在压抑，压抑感受，分歧。换言之，我们没被了解，我们需要改进，坦诚，敞开心扉，彼此分享。这里有几种强调积极方面，大家记得那本“更幸福”的书，我讲过的关于幸福助力器，有一些细小的事情，可以是几分钟也可以是几小时的事，能让我们快乐，也很有意义。就像我们借助幸福助力器滴水穿石地提高我们一辈子的幸福感。我们也可以借助爱情助力器。  
-有一个关于爱因斯坦与Ludwing van der Rohe的故事，Ludwig van der Rohe是量子物理学的创始人之一。Ludwig van der Rohe写信给爱因斯坦说“我想你进入量子物理这个神奇而美妙的新领域，我需要您的支持。”爱因斯坦当时颇有很高声望，他回了一封信。信里对Ludwig van der Rohe说：“我对量子物理不感兴趣，因为我对细节上的东西不感兴趣，我感兴趣的是上帝在创造世界时他在想着什么。我对细节没兴趣，我只关心上帝创造世界时的他在想着什么。”Ludwig van der Rohe回信说：“上帝就在细节中”。爱情也是这样，爱情就在细节中，爱情不在一周或一个月的环游世界中，爱情不在五克拉的钻戒里。这些东西是很美妙，也确实激发了幸福感，有时甚至激发了爱情，但它们不能维持一段美好的感情，能够长期维持幸福恋情的是细节，那是些微小的事情，是每天的生活常规，触碰、凝视、共进晚餐。迷你爱情助力器也能维持，这是我从Peter Fraenkel学来的，他是纽约Ackerman家庭服务中心的。他讲的是一天里的30秒的幸福点，无论是一个激吻，或只是一个单纯的拥抱，或是发给伴侣的一条短信，告诉他们你有多爱他们多想他们这类小事。他们发现正是这些小事产生重大影响，当然，大事也能产生影响。我不是贬低大事，但那只能导致激变，而维持幸福需要长久的努力，需要奉献，感情的维系主要是靠注重这些日常琐碎的小事，我们怎么做呢？我们表现出我们的关心，我们问“你今天过得怎样？”或“讲讲你刚做了什么”或“你在想什么”或“你不太高兴啊，我能做什么”表现出关心，画爱情地图，去了解对方，他喜欢什么，不喜欢什么，有多喜欢。就是这些小事，比如触碰，微笑，送花，记得重要的日子。现在这些简单多了，我们有电脑提醒我们。就我个人经验来讲，称赞，称赞对方，不要以为一切都是理所应当的，记得我们讲过感激，两个意思，其中之一就是称赞某人“你看起来棒极了”，这太好了，谢谢你做这些，谢谢你想到我。带有感激的赞赏是最好的感激，当我们不懂得感激与赞赏时，美好就会贬值，马克吐温说过“一个好的赞赏能让我高兴一个月”不要只理解了他的字面意思。  
+有一个关于爱因斯坦与Ludwing van der Rohe的故事，Ludwig van der Rohe是量子物理学的创始人之一。Ludwig van der Rohe写信给爱因斯坦说“我想你进入量子物理这个神奇而美妙的新领域，我需要您的支持。”爱因斯坦当时颇有很高声望，他回了一封信。信里对Ludwig van der Rohe说：“我对量子物理不感兴趣，因为我对细节上的东西不感兴趣，我感兴趣的是上帝在创造世界时他在想着什么。我对细节没兴趣，我只关心上帝创造世界时的他在想着什么。”Ludwig van der Rohe回信说：“上帝就在细节中”。爱情也是这样，爱情就在细节中，爱情不在一周或一个月的环游世界中，爱情不在五克拉的钻戒里。这些东西是很美妙，也确实激发了幸福感，有时甚至激发了爱情，但它们不能维持一段美好的感情，**能够长期维持幸福恋情的是细节**，那是些微小的事情，是每天的生活常规，触碰、凝视、共进晚餐。迷你爱情助力器也能维持，这是我从Peter Fraenkel学来的，他是纽约Ackerman家庭服务中心的。他讲的是一天里的30秒的幸福点，无论是一个激吻，或只是一个单纯的拥抱，或是发给伴侣的一条短信，告诉他们你有多爱他们多想他们这类小事。他们发现正是这些小事产生重大影响，当然，大事也能产生影响。我不是贬低大事，但那只能导致激变，而维持幸福需要长久的努力，需要奉献，感情的维系主要是靠注重这些日常琐碎的小事，我们怎么做呢？我们表现出我们的关心，我们问“你今天过得怎样？”或“讲讲你刚做了什么”或“你在想什么”或“你不太高兴啊，我能做什么”表现出关心，画爱情地图，去了解对方，他喜欢什么，不喜欢什么，有多喜欢。就是这些小事，比如触碰，微笑，送花，记得重要的日子。现在这些简单多了，我们有电脑提醒我们。就我个人经验来讲，称赞，称赞对方，不要以为一切都是理所应当的，记得我们讲过感激，两个意思，其中之一就是称赞某人“你看起来棒极了”，这太好了，谢谢你做这些，谢谢你想到我。带有感激的赞赏是最好的感激，当我们不懂得感激与赞赏时，美好就会贬值，马克吐温说过“一个好的赞赏能让我高兴一个月”不要只理解了他的字面意思。  
 给你们讲个故事，这是我的岳父与岳母的故事。我的岳父毕业于哈佛法学院，很聪明很有才华，他叫Amie,娶了一位可爱的女人Rachel Rahel（希伯来语发音）。又一次他们约会，Rahel穿了件很美的裙子，他们去参加一个派队，整晚都在这里，派队上人很多，那是一个美妙的夜晚，派队结束后他们回到家。Rahel问Amie，“Amie，今晚整个晚上我得到了无数赞美，说我很漂亮，说我裙子很美，很容光焕发，大家都赞美我，却惟独你没有。”要知道Amie是哈佛法学毕业生，非常聪明，反应灵敏，他是以色列的一流律师。她说道“Rahel，你还记得几个月前我告诉你，你有多美丽动人吗？”她说“我当然记得”。他说“直到另行通知前，你都那么美丽动人”。这句话几乎能过关了，问题是Rahel也是个律师，同样聪明同样成功，她对他说“Amie,直到另行通知前，你都睡沙发。”所以不要等别人开口，你才赞美他们。主动赞美，又不花钱，然而虽不花钱，但它的价值却是不可估量的，因为它令我们获益甚多，赞美与被赞美的人都受益。最能预测一段治疗关系是否成功，最能预测一个治疗师、心理学家、社工是否成功的是移情，你有多理解多同情多认同你的客户，在恋情中也一样。我真的在聆听我的伴侣吗？我真的在看我的伴侣吗？我真的对我伴侣做的事表现出真诚的关心吗？他们好吗？我真的想要了解他们吗？因为如果不是这样，要维持长久美好的恋情是很难的。最后，性在长久美好恋情中很重要，性不一定要在婚前发生，或者等到彼此承诺厮守一生才发生性关系，这厮守可以是结婚也可以不是，可以是婚姻。在现实生活中也经常是婚姻，是不是结婚都行。然而，对于长期恋情的成功延续，生理方面也很重要，极少的情况下也存在，也存在极少的恋情是没有生理方面的因素的，生理因素是区分爱与深厚友情的一个显著特征。  
 爱情，准确的说性的至高点使爱具体化。使爱具体化，这也是为什么我们会说做爱，它是感情，是抽象的爱的具体化。生理方面很重要的一点是，健康的交流，就像别的感情一样，因为我们经常坦露自己，分享自己，在卧室远多过在其他地方。无论是肉体上还是情感上还是认知上，那是我们敞开心怀的地方，那是我们真正赤裸相对的地方。交流是很重要的，因为人与人的期望值是不同的，这也没什么统一的规定。一周5次性生活，最好的恋情。三次，不错。一次，合格。不，有很多美妙的恋情，一天一次或者一星期一次，有一些美妙的恋情或是一天三次。不，对此没有统一的规定。我不知道我刚才说的那句好笑，不过我课后会看一下的，因为我相信佛洛依德现在一定也在看着。最重要的是交流，因为它是冲突的根源，是冲突的潜在根源，并不必一定如此。来看一段短视频，注意力从我这里转移开一下，这是伍迪艾伦的影片。（【电影：安妮霍尔（1997）-屏幕上字屏】我记得对上一次开心的时候是在布鲁克林的那天，我们再也不开怀大笑了，我一直情绪低落，欲求不满了。你们多久做爱一次？性生活频繁吗？很少，一周三次吧，经常做，一周三次吧，前几天晚上，Alvy想做爱。前几天晚上她不想和我睡，你知道吗？我不知道，如果是六个月前为他开心我会做。我什么都试过了，放轻音乐浅红色的灯光。但是自从我们来这里讨论后，我觉得我有权顾及自己的感受，我觉得你听到这个会高兴，因为我真的能坚持自我了。最讽刺的是，我出钱让她看心理医生，她有改善了，我却更糟糕了。我不知道，我觉得好内疚，因为Alvy出钱让我来看，所以不和他上床让我内疚，但要是真的和他上床感觉像我不顾及自己的感受，我没进展，我赢不了，有时我就得我该找个女人住。）  
 “很少，一周三次”，“经常做，一周三次”不同的看法，沟通很重要。  
